CI images update

--- a/images/chan-hoi-coco/config.ini
+++ b/images/chan-hoi-coco/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-coco.html
 lastopen = 2024-06-09 23:18:33
 
 [search]
-lastsearch = 2024-08-04 20:27:41
+lastsearch = 2024-08-04 22:31:45
 
 [hk.linkedin.com]
 match = -23.1%%
@@ -245,4 +245,9 @@ url = https://www.gettyimages.com/photos/chan-hoi-wan
 match = -269.2%%
 title = CoCo sữa sadoer 120ml dưỡng ẩm mềm mại và mịn màng ...
 url = https://www.lazada.vn/products/coco-sua-sadoer-120ml-duong-am-mem-mai-va-min-mang-lo-hoi-sua-rua-mat-lam-sach-sau-va-may-lam-sach-lo-chan-long-i2389709691.html
+
+[hoichan.com]
+match = 0.0%%
+title = Hoi Chan
+url = https://hoichan.com/
 
