--- a/images/chieu-dieu-hoa-khong-goi-15/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-15.html
 lastopen = 2024-06-09 23:41:33
 
 [search]
-lastsearch = 2024-08-04 20:41:05
+lastsearch = 2024-08-04 22:44:50
 
 [demxanh.com]
 match = 0.0%%
@@ -17,9 +17,9 @@ title = Chiếu Điều Hòa Goni - Ưu Đãi Tháng 08/2024
 url = https://goni.vn/chieu-dieu-hoa-goni/
 
 [shopee.vn]
-match = -25.9%%
-title = Chiếu điều hoà,chiếu mây ❤mặt sau nót lụa hàng Việt ...
-url = https://shopee.vn/Chiếu-điều-hoà-chiếu-mây-❤mặt-sau-nót-lụa-hàng-Việt-Nam-chất-lượng-cao-❤️hàng-rẻ-nhất-(k-vỏ-gối)-i.163405403.21211733314
+match = 18.5%%
+title = Chiếu Điều Hòa Giá Tốt, Chất Lượng, Đảm Bảo
+url = https://shopee.vn/list/chiếu điều hòa
 
 [foreverbedding.net]
 match = -59.3%%
