--- a/images/chieu-lac-d2-09/config.ini
+++ b/images/chieu-lac-d2-09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-09.html
 lastopen = 2024-06-21 06:29:43
 
 [search]
-lastsearch = 2024-08-04 20:39:24
+lastsearch = 2024-08-04 22:30:02
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -47,9 +47,9 @@ title = Mặt bằng Lumiere Boulevard - Layout thiết kế căn hộ
 url = https://grandpark-vinhomes.com/mat-bang-lumiere-boulevard/
 
 [www.youtube.com]
-match = -80.0%%
-title = Đen x JustaTee - Đi Về Nhà (M/V)
-url = https://www.youtube.com/watch?v=vTJdVE_gjI0
+match = -213.3%%
+title = Tấp Nập Phố ĂN UỐNG từ Thanh Đa về Đường D2 (Nguyễn ...
+url = https://www.youtube.com/watch?v=JfpM2gS-NKI
 
 [vinpearl.com]
 match = -226.7%%
