--- a/images/chieu-lac-gam-18/config.ini
+++ b/images/chieu-lac-gam-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-18.html
 lastopen = 2024-06-09 23:47:34
 
 [search]
-lastsearch = 2024-08-04 20:15:59
+lastsearch = 2024-08-04 22:41:18
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -187,9 +187,9 @@ title = 974 người theo dõi trên Pinterest - Petal Designs
 url = https://petaldesigns.co.za/ảnh-cặc-to-anime.html
 
 [m.facebook.com]
-match = -137.5%%
-title = 🛑 TRỰC TIẾP: U18 BẠC LIÊU - TÙNG DƯƠNG FC 🚩Giải ...
-url = https://m.facebook.com/Tynguyenmedia.vn/videos/-trực-tiếp-u18-bạc-liêu-tùng-dương-fc-giải-bóng-đá-u18-vsports-toàn-quốc-mùa-3-2/1640507346746178/
+match = -112.5%%
+title = 🛑 TRỰC TIẾP: PHƯƠNG HUY FC - AUTOMOBILE & ...
+url = https://m.facebook.com/Tynguyenmedia.vn/videos/-trực-tiếp-phương-huy-fc-automobile-intrase-giải-bóng-đá-u18-vsports-toàn-quốc-m/1257218481911738/
 
 [baomoi.com]
 match = -193.8%%
