--- a/images/chieu-nhua-ha-noi-du-lich-16/config.ini
+++ b/images/chieu-nhua-ha-noi-du-lich-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-16.html
 lastopen = 2024-06-09 23:14:36
 
 [search]
-lastsearch = 2024-08-04 20:25:38
+lastsearch = 2024-08-04 22:44:29
 
 [www.diepxuan.com]
 match = 35.7%%
@@ -17,9 +17,9 @@ title = Chiếu nhựa chố giá tốt Tháng 8, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=Chiếu nhựa chố
 
 [tiki.vn]
-match = -21.4%%
-title = Chiếu nhựa việt nam 2mx4m hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=chiếu nhựa việt nam 2mx4m
+match = 3.6%%
+title = Chiếu nhựa gấp gọn hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=chiếu nhựa gấp gọn
 
 [www.yellowpages.vn]
 match = -5.3%%
