--- a/images/chieu-truc-thai-den15/config.ini
+++ b/images/chieu-truc-thai-den15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den15.html
 lastopen = 2024-06-07 00:18:02
 
 [search]
-lastsearch = 2024-08-04 21:27:50
+lastsearch = 2024-08-04 22:27:55
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -22,9 +22,9 @@ title = Chiếu Trúc Gỗ Xịn Thái Lan 1,5mx1,9m-1,6mx2m-1, ...
 url = https://shopee.vn/Chiếu-Trúc-Gỗ-Xịn-Thái-Lan-1-5mx1-9m-1-6mx2m-1-8mx2m-Hàng-Cao-Cấp-i.158114102.5332512087
 
 [demxanh.com]
-match = 14.3%%
-title = Chiếu Trúc cao cấp hạt Đen - Hà Nội
-url = https://demxanh.com/chieu-truc-den.html
+match = -28.6%%
+title = [Hot] Bảng giá Chiếu trúc khuyến mãi 2023
+url = https://demxanh.com/bang-gia-chieu-truc-2018.html
 
 [www.lazada.vn]
 match = -85.7%%
@@ -42,9 +42,9 @@ title = Bảo hộ Chỉ dẫn địa lý “Cao Bằng” cho sản phẩm trú
 url = https://ipvietnam.gov.vn/tin-tuc-su-kien/-/asset_publisher/7xsjBfqhCDAV/content/bao-ho-chi-dan-ia-ly-cao-bang-cho-san-pham-truc-sao-va-chieu-truc-s-2/pop_up?_101_INSTANCE_7xsjBfqhCDAV_viewMode=print
 
 [chieutrelanlan.com]
-match = -114.3%%
-title = Chiếu trúc thương hiệu Việt Nam, chất lượng tốt - Bảo hành ...
-url = https://chieutrelanlan.com/
+match = 9.5%%
+title = Chiếu trúc cao cấp Thái Lan 1m6x200cm
+url = https://chieutrelanlan.com/chieu-truc-cao-cap-thai-lan-1m6x2m-87.html
 
 [thegioidemviet.vn]
 match = -23.8%%
@@ -252,9 +252,9 @@ title = Ngôi nhà điên nhưng con người thì không điên
 url = https://www.tapchikientruc.com.vn/tac-gia-tac-pham/ngoi-nha-dien-nhung-con-nguoi-thi-khong-dien.html
 
 [m.facebook.com]
-match = -123.8%%
-title = Hiện nay, Hội Anh Em Dân Chủ vẫn đang phải đối mặt với ...
-url = https://m.facebook.com/datvietdotcom/photos/hiện-nay-hội-anh-em-dân-chủ-vẫn-đang-phải-đối-mặt-với-sự-đàn-áp-mạnh-mẽ-nhiều-th/808840614706197/
+match = -38.1%%
+title = Vietnam Airlines added a new photo.
+url = https://m.facebook.com/100064777894182/photos/925628519606403/
 
 [tuoitre.vn]
 match = -104.8%%
@@ -329,7 +329,7 @@ url = https://www.facebook.com/p/Sản-Xuất-Mành-Tre-Trúc-Tại-Ninh-Bình-0
 [dienmaycholon.com]
 match = -104.8%%
 title = Mua quạt điều hòa, máy làm mát không khí trả góp ...
-url = https://dienmaycholon.com/may-lam-mat-quat-dieu-hoa?srsltid=AfmBOopp4rxh-dqKAX7uBXrGMcqEAtLPW9nU1msnMhZ7K-G41g8puZEh
+url = https://dienmaycholon.com/may-lam-mat-quat-dieu-hoa
 
 [baoquangninh.vn]
 match = -104.8%%
@@ -545,4 +545,9 @@ url = https://dangcongsan.vn/kinh-te/muc-gia-ve-may-bay-noi-dia-dip-cuoi-he-thap
 match = -85.7%%
 title = Những điều cần biết về ngộ độc khí CO(02/08/2024)
 url = https://www.dongnai.gov.vn/Pages/newsdetail.aspx?NewsId=45824&CatId=109
+
+[baonamdinh.vn]
+match = -123.8%%
+title = Tay vợt Thái Lan tranh HCV cầu lông Olympic 2024 với ...
+url = https://baonamdinh.vn/the-thao/202408/tay-vot-thai-lan-tranh-hcv-cau-long-olympic-2024-voi-viktor-axelsen-8a65433/
 
