--- a/images/ga-chun-dreamland-180x200-ct/config.ini
+++ b/images/ga-chun-dreamland-180x200-ct/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/ga-chun-dreamland-180x200-ct.html
 lastopen = 2024-06-07 01:32:20
 
 [search]
-lastsearch = 2024-08-04 21:24:44
+lastsearch = 2024-08-04 22:34:06
 
 [demxanh.com]
 match = -42.9%%
 title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 11
-url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-11.html?srsltid=AfmBOoqRlXHY4x5YmOgGCw05EDEQGkYfvoOdelpr6ZdcN9ZSKqZxLSqH
+url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-11.html
 
 [www.diepxuan.com]
-match = 10.7%%
-title = Điệp Xuân Ga chun chần ES1707 160x200
-url = https://www.diepxuan.com/ga-chun-chan-es1707-160x200.html?srsltid=AfmBOooAZ6rdFpRhyPOfQvqdYYwXvKlO9BEO3WmSjoVYq6rtaDcZbSaa
+match = 25.0%%
+title = Ga phủ ESM20013 180x200 - Điệp Xuân
+url = https://www.diepxuan.com/ga-phu-esm20013-180x200.html
 
 [mgaleg.maryland.gov]
 match = -75.0%%
@@ -24,12 +24,12 @@ url = https://mgaleg.maryland.gov/mgawebsite/Committees/Media/false?cmte=b&t&ys=
 [vuanem.com]
 match = -57.1%%
 title = Top 8 cửa hàng bán chăn ga gối nệm Quận 1 chất lượng ...
-url = https://vuanem.com/blog/cua-hang-chan-ga-goi-nem-quan-1.html?srsltid=AfmBOooo2x8j_fZLLSmXvnKla5s2Ohn8q_7_FiBxIMRDeY24Z1O0vyra
+url = https://vuanem.com/blog/cua-hang-chan-ga-goi-nem-quan-1.html
 
 [demxinh.vn]
-match = -67.9%%
-title = [HỎI ĐÁP] Vải TC là gì? Ứng dụng của vải TC trong đời sống
-url = https://demxinh.vn/tong-hop/vai-tc.html
+match = -50.0%%
+title = Vải Viscose là gì? Đặc tính và các ứng dụng phổ biến
+url = https://demxinh.vn/tong-hop/vai-viscose.html
 
 [www.vbet.com]
 match = -10.7%%
