--- a/images/ga-phu-uc-16/config.ini
+++ b/images/ga-phu-uc-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ga-phu-uc-16.html
 lastopen = 2024-06-07 01:01:59
 
 [search]
-lastsearch = 2024-08-04 20:06:04
+lastsearch = 2024-08-04 22:39:56
 
 [us.misumi-ec.com]
 match = -325.0%%
 title = GA16-16-6 | Enclosures - ABS Box, Water/Dust Proof, GA ...
-url = https://us.misumi-ec.com/vona2/detail/222000229166/?HissuCode=GA16-16-6
+url = https://us.misumi-ec.com/vona2/detail/222000229166/?HissuCode=GA16-16-6&srsltid=AfmBOorDwuMFN2fwv76JPFoMi9rOQEV7_nU99YHRrRBYhzDlRrSYOlIt
 
 [www.amazon.com]
 match = -91.7%%
@@ -347,7 +347,12 @@ title =
 url = https://pc.fsu.edu/
 
 [books.google.com]
-match = -333.3%%
-title = Der n-tv-Atlas: die Welt hinter den Nachrichten ; [mit ...
-url = https://books.google.com/books?id=lFboHwfSwFsC&pg=PA360&lpg=PA360&dq=ga+phu+uc+16&source=bl&ots=-SL-BBWCOA&sig=ACfU3U0vzWAvHCt7oo1mg-Uo_LIYOKtrvw&hl=en&sa=X&ved=2ahUKEwiJiO-DuduHAxXWHjQIHYo_Ct0Q6AF6BAgjEAM
+match = -316.7%%
+title = Gazetteer - Issues 11-13 - Page 24 - Google Books Result
+url = https://books.google.com/books?id=tTo9AAAAIAAJ&pg=RA1-PA24&lpg=RA1-PA24&dq=ga+phu+uc+16&source=bl&ots=BHZDkxKE8u&sig=ACfU3U3OD4EUL7-xRQi2iSIUm7Xq5TuDLQ&hl=en&sa=X&ved=2ahUKEwi3sOv61duHAxVzFzQIHcDdAxEQ6AF6BAg0EAM
+
+[issuu.com]
+match = -175.0%%
+title = 2022 UC Santa Cruz Commencement Program
+url = https://issuu.com/ucsccollegestudentlife/docs/commencement_program_2022_final
 
