--- a/images/man-re-trang-10/config.ini
+++ b/images/man-re-trang-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-10.html
 lastopen = 2024-06-07 00:52:54
 
 [search]
-lastsearch = 2024-08-04 21:42:28
+lastsearch = 2024-08-04 22:39:37
 
 [burningman.org]
 match = 0.0%%
@@ -29,7 +29,7 @@ url = http://desaulnier.house.gov/
 [account.microsoft.com]
 match = -200.0%%
 title = Microsoft account | Sign In or Create Your Account Today
-url = https://account.microsoft.com/account/manage-my-account
+url = https://account.microsoft.com/account
 
 [www.regmovies.com]
 match = -113.3%%
@@ -890,4 +890,9 @@ url = https://www.whec.com/
 match = 0.0%%
 title = 
 url = https://www.congress.gov/member/district/mark-desaulnier/D000623
+
+[www.kentucky.com]
+match = -226.7%%
+title = Lexington Herald Leader: Lexington KY Breaking News & Sports
+url = https://www.kentucky.com/
 
