--- a/images/tham-giuong-loai-1-14/config.ini
+++ b/images/tham-giuong-loai-1-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-loai-1-14.html
 lastopen = 2024-06-07 00:36:45
 
 [search]
-lastsearch = 2024-08-04 21:19:39
+lastsearch = 2024-08-04 22:43:47
 
 [bilystore.vn]
 match = -81.0%%
@@ -12,9 +12,9 @@ title = Thảm phòng ngủ NA14 - Bilystore thảm trải sàn cao cấp
 url = https://bilystore.vn/tham-phong-ngu-na14/
 
 [shopee.vn]
-match = -114.3%%
-title = Thảm lông cừu trải giường, thảm nỉ nhung trải giường kích ...
-url = https://shopee.vn/Thảm-lông-cừu-trải-giường-thảm-nỉ-nhung-trải-giường-kích-thước-1m2x1m9-hàng-loại-1-i.267488477.19054543830
+match = -33.3%%
+title = Thảm lông cừu trải giường, thảm nỉ nhung ...
+url = https://shopee.vn/Thảm-lông-cừu-trải-giường-thảm-nỉ-nhung-trải-giường-thảm-nhung-đa-năng-thảm-trải-giường-3-lớp-loại-1-i.267488477.15016298625
 
 [tiki.vn]
 match = -38.1%%
