--- a/images/tui-nem-korea-tuan-anh-14/config.ini
+++ b/images/tui-nem-korea-tuan-anh-14/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-14.html
 lastopen = 2024-06-17 10:43:32
 
 [search]
-lastsearch = 2024-08-04 18:16:48
+lastsearch = 2024-08-04 22:34:27
 
 [suongtuyet.com]
-match = -4.0%%
-title = Nệm Gòn Ép Tuấn Anh Korea Plus Vải Gấm
-url = https://suongtuyet.com/nem-gon-ep-tuan-anh-korea-plus-vai-gam
+match = -36.0%%
+title = Nệm Bông Ép Tuấn Anh Korea Vải Valize - Đà Nẵng
+url = https://suongtuyet.com/nem-bong-ep-tuan-anh-seong-san-vai-gam
 
 [tuananh.vn]
-match = 8.0%%
-title = Đệm bông ép 3 mảnh Korea Kaki
-url = https://tuananh.vn/dem-bong-ep-korea-kaki-p112.html
+match = 20.8%%
+title = Đệm Bông ép 2 mảnh Korea
+url = https://tuananh.vn/dem-bong-ep-2-manh-korea--p133.html
 
 [demxanh.com]
 match = -48.0%%
@@ -77,9 +77,9 @@ title = Đệm bông ép Tuấn Anh Korea công bông xanh nano kháng ...
 url = https://www.youtube.com/watch?v=GHsI7BMy734
 
 [m.facebook.com]
-match = -68.0%%
-title = đầy đủ các loại máy cập bến để phục vụ cho ace đây ạ
-url = https://m.facebook.com/groups/317204786650138/posts/1049657896738153/
+match = -8.0%%
+title = HỘI NGƯỜI VIỆT NAM TẠI HÀN QUỐC -KOREA✈️
+url = https://m.facebook.com/groups/1588965941440570/posts/2246582662345558/
 
 [www.facebook.com]
 match = -64.0%%
