CI images update

--- a/images/chieu-cay-ht-15/config.ini
+++ b/images/chieu-cay-ht-15/config.ini
@@ -29,7 +29,7 @@ url = https://daros.com.vn/ht-15.html
 [htguitarcenter.vn]
 match = -26.7%%
 title = Guitar Trần Acoustic THD-15
-url = https://htguitarcenter.vn/san-pham/guitar-acoustic-thd-15/
+url = http://htguitarcenter.vn/san-pham/guitar-acoustic-thd-15/
 
 [www.htlightlevel.vn]
 match = -200.0%%
