--- a/images/vo-goi-vuong-uc/config.ini
+++ b/images/vo-goi-vuong-uc/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-goi-vuong-uc.html
 lastopen = 2024-06-06 16:45:20
 
 [search]
-lastsearch = 2024-08-04 18:29:25
+lastsearch = 2024-08-04 23:00:59
 
 [www.lazada.vn]
-match = -146.7%%
-title = vo goi tua lung - Vỏ gối vuông tựa lưng size 45x45cm
-url = https://www.lazada.vn/products/vo-goi-vuong-tua-lung-size-45x45cm-khong-co-ruot-goi-vo-goi-vuong-vo-goi-tua-lung-i222145077.html
+match = -46.7%%
+title = Vỏ Gối Vuông 60x60 Giá Tốt T07/2024
+url = https://www.lazada.vn/tag/vo-goi-vuong-60x60/
 
 [shopee.vn]
 match = 13.3%%
