--- a/images/bo-ga-goi-chun-coco-18/config.ini
+++ b/images/bo-ga-goi-chun-coco-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-coco-18.html
 lastopen = 2024-06-09 23:53:28
 
 [search]
-lastsearch = 2024-08-04 21:14:47
+lastsearch = 2024-08-04 22:55:45
 
 [www.diepxuan.com]
 match = 4.5%%
@@ -27,8 +27,8 @@ title = Bộ ga chun My Youth - MY18
 url = https://hanvico.com.vn/san-pham/bo-ga-chun-my-youth-my18/
 
 [www.lazada.vn]
-match = -118.2%%
-title = Chăn ga gối Nỉ COCO hàng loại 1 siêu mềm mượt, chăn 4kg cực ...
+match = -59.1%%
+title = Chăn ga gối Nỉ COCO hàng loại 1 siêu mềm mượt, ...
 url = https://www.lazada.vn/products/chan-ga-goi-ni-coco-hang-loai-1-sieu-mem-muot-chan-4kg-cuc-am-mua-thu-dong-i2492985749-s12208197211.html?from_gmc=1&fl_tag=1
 
 [www.instagram.com]
@@ -47,9 +47,9 @@ title = Bộ Ga Gối Chun Siêu Sang, Giá Khuyến Mãi, Tiết Kiệm Tối .
 url = https://www.sendo.vn/bo-ga-goi-chun.htm
 
 [demxanh.com]
-match = -50.0%%
-title = Chiếu cao su non Coco bo chun màu xanh dương
-url = https://demxanh.com/chieu-cao-su-non-coco-bo-chun-mau-xanh-duong.html
+match = -45.5%%
+title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 18
+url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-18.html
 
 [www.tiktok.com]
 match = -127.3%%
