--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-08-04 13:18:13
+lastsearch = 2024-08-04 23:00:14
 
 [en.wikipedia.org]
 match = -45.5%%
@@ -28,13 +28,13 @@ url = https://www.qsc.com/solutions-products/loudspeakers/portable/powered/porta
 
 [www.ncbi.nlm.nih.gov]
 match = -200.0%%
-title = Discovery of a novel third-generation EGFR inhibitor and ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7218543/
+title = TRPC channels: Structure, function, regulation and recent ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7183440/
 
 [books.google.com]
 match = -200.0%%
 title = Reactive Oxygen Species in Chemistry, Biology, and Medicine
-url = https://books.google.com/books?id=p5LkBwAAQBAJ&pg=PA123&lpg=PA123&dq=chan+5+kg+kq+song&source=bl&ots=XG0uau-1Kh&sig=ACfU3U26hm_wemk8DwdW2cwrUpStDXIoFg&hl=en&sa=X&ved=2ahUKEwi7r-mz2NqHAxWDkokEHeSIA5IQ6AF6BAgZEAM
+url = https://books.google.com/books?id=p5LkBwAAQBAJ&pg=PA123&lpg=PA123&dq=chan+5+kg+kq+song&source=bl&ots=XG0uax41Cj&sig=ACfU3U0BMsjIsaHAiIdhJCnhIxgLH_O9qA&hl=en&sa=X&ved=2ahUKEwji0NS_2tuHAxXPFVkFHUkqB44Q6AF6BAgYEAM
 
 [www.ateezstoryline.com]
 match = 0.0%%
@@ -109,7 +109,7 @@ url = https://www.aasv.org/library/swineinfo/series_index.php?id=4
 [www.diepxuan.com]
 match = -29.4%%
 title = Chăn KQ không sóng 5kg - Điệp Xuân
-url = https://www.diepxuan.com/chan-kq-khong-song-5kg.html?srsltid=AfmBOopkuBg5uJim7FUJqpBfAoX2XXM4v3Sr_Dwq8cxjZ4cJCbGzrBV2
+url = https://www.diepxuan.com/chan-kq-khong-song-5kg.html
 
 [www.kvaser.cn]
 match = -5.9%%
