--- a/images/chan-hoi-mai-rua/config.ini
+++ b/images/chan-hoi-mai-rua/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-mai-rua.html
 lastopen = 2024-06-09 23:40:13
 
 [search]
-lastsearch = 2024-08-04 20:27:44
+lastsearch = 2024-08-04 22:53:17
 
 [shopee.vn]
 match = -162.5%%
@@ -12,9 +12,9 @@ title = Chăn Lông Cừu Đại Hàn , Chăn cừu mai rùa siêu ấm kích ..
 url = https://shopee.vn/Chăn-Lông-Cừu-Đại-Hàn-Chăn-cừu-mai-rùa-siêu-ấm-kích-thước-2mx2m3-nặng~-3-8kg-Hàng-Loại-1-Cao-Cấp-Dày-3-Lớp-Siêu-Ấm-i.134729951.23858267538
 
 [www.instagram.com]
-match = -12.5%%
-title = Chan Hoi Wai (@highwaychanchan)
-url = https://www.instagram.com/highwaychanchan/
+match = -162.5%%
+title = Hoi Chan (@hoichandraws) • Instagram photos and videos
+url = https://www.instagram.com/hoichandraws/?hl=en
 
 [vi.wikipedia.org]
 match = 28.6%%
@@ -107,8 +107,8 @@ title = Micro mai rùa đa hướng Shure MX393/S
 url = https://tca.vn/micro-mai-rua-da-huong-shure-mx393-s/
 
 [trungtamthuocdantoc.com]
-match = -187.5%%
-title = Mai Rùa (Quy Bản) - Công Dụng và Cách Dùng Của Vị Thuốc
+match = -175.0%%
+title = Mai Rùa (Quy Bản) - Công Dụng và Cách Dùng Của Vị ...
 url = https://trungtamthuocdantoc.com/duoc-lieu/mai-rua
 
 [medcare.com.vn]
