--- a/images/chieu-cay-moc-hoa14/config.ini
+++ b/images/chieu-cay-moc-hoa14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa14.html
 lastopen = 2024-06-09 23:35:14
 
 [search]
-lastsearch = 2024-08-04 20:38:18
+lastsearch = 2024-08-04 22:48:25
 
 [www.youtube.com]
-match = -100.0%%
-title = Cách trồng và chăm sóc để cho cây mộc hương lớn nhanh
-url = https://www.youtube.com/watch?v=RXftwVsMiEc
+match = -89.5%%
+title = Cách đơn giản để cây mộc hương của bạn nở nhiều hoa
+url = https://www.youtube.com/watch?v=VQ9o9tAU0jk
 
 [trangtrisanvuon.vn]
 match = -147.4%%
