--- a/images/chieu-truc-que-lam-loai-2-10/config.ini
+++ b/images/chieu-truc-que-lam-loai-2-10/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-2-10.html
 lastopen = 2024-06-07 00:19:30
 
 [search]
-lastsearch = 2024-08-04 21:48:09
+lastsearch = 2024-08-04 22:55:03
 
 [thegioidemviet.vn]
-match = 21.4%%
-title = BẢNG GIÁ Chiếu Trúc Việt Nam mới nhất ...
-url = https://thegioidemviet.vn/chieu-truc/
+match = 35.7%%
+title = Bảng Giá Chiếu Trúc Quế Lâm [Chính hãng
+url = https://thegioidemviet.vn/chieu-truc-que-lam/
 
 [chieutrelanlan.com]
-match = 25.0%%
-title = Chiếu trúc Việt nam - Thương hiệu Lan Lan
-url = https://chieutrelanlan.com/chieu-truc-p17.html
+match = 14.3%%
+title = Chiếu trúc Quế Lâm không viền màu trắng 160x200cm
+url = https://chieutrelanlan.com/chieu-truc-que-lam-khong-vien-mau-trang-160x200cm-72.html
 
 [www.facebook.com]
 match = 71.4%%
@@ -27,9 +27,9 @@ title = CHIẾU TRÚC QUẾ LÂM MẮT NGỌC KHÔNG HOA VĂN ...
 url = https://shopee.vn/CHIẾU-TRÚC-QUẾ-LÂM-MẮT-NGỌC-KHÔNG-HOA-VĂN-HÀNG-LOẠI-1-BÓNG-ĐẸP-i.444652147.14296554126
 
 [demxanh.com]
-match = -25.0%%
-title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html
+match = -7.1%%
+title = Chiếu trúc hạt Quế Lâm hạt vàng 100x190cm hàng loại 1
+url = https://demxanh.com/chieu-truc-hat-que-lam-hat-vang.html
 
 [tiki.vn]
 match = -39.3%%
@@ -95,4 +95,14 @@ url = https://caobanggreen.vn/wp-content/uploads/2024/05/?MD
 match = 22.2%%
 title = Thương lắm quê hương cơ cực
 url = https://ngochieu.com/thuong-lam-que-huong-co-cuc/
+
+[huyrua.wordpress.com]
+match = -67.9%%
+title = Câu cá bông lau – Con người và kỹ thuật - Huy Nguyen's Blog
+url = https://huyrua.wordpress.com/2009/05/27/cau-ca-bong-lau/
+
+[daa.uit.edu.vn]
+match = -200.0%%
+title = //:':r;.#
+url = https://daa.uit.edu.vn/sites/daa/files/202310/809-qd-dhqg_3-7-2023_quy_dinh_dgkqht_theo_hinh_thuc_tt.pdf
 
