--- a/images/giuong-mn-2/config.ini
+++ b/images/giuong-mn-2/config.ini
@@ -87,8 +87,8 @@ title = Giường 2 M Giá Tốt T05/2024 | Mua tại Lazada.vn
 url = https://www.lazada.vn/tag/giuong-2-m/?innerlink=hot_v1&page=2
 
 [tiki.vn]
-match = -245.5%%
-title = Giường 2mx2m2 hàng chính hãng, giao nhanh - Tiki
+match = -181.8%%
+title = Giường 2mx2m2 hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=giường 2mx2m2
 
 [www.facebook.com]
