CI images update

--- a/images/chieu-lac-gam-14/config.ini
+++ b/images/chieu-lac-gam-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-14.html
 lastopen = 2024-06-09 23:47:29
 
 [search]
-lastsearch = 2024-08-04 22:53:38
+lastsearch = 2024-08-04 23:40:36
 
 [www.diepxuan.com]
 match = 56.2%%
@@ -520,4 +520,9 @@ url = https://www.pnj.com.vn/lac-vong-tay/lac-vong-tay-vang/
 match = -218.8%%
 title = Giá vàng 9999 hôm nay tại 64 tỉnh 4/8/2024 | Bảng giá vàng
 url = https://primagold.com.vn/
+
+[kontumcity.kontum.gov.vn]
+match = -162.5%%
+title = chiều nay đánh số mấy🐕 【WW88.Game】 Casino Online ...
+url = https://kontumcity.kontum.gov.vn/games126538/
 
