--- a/images/bo-ga-goi-chun-chan-happy-16/config.ini
+++ b/images/bo-ga-goi-chun-chan-happy-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-chan-happy-16.html
 lastopen = 2024-06-06 16:51:08
 
 [search]
-lastsearch = 2024-08-04 21:50:54
+lastsearch = 2024-08-04 23:42:01
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -17,9 +17,9 @@ title = Happiness Việt Nam | Hanoi
 url = https://www.facebook.com/changahappinessvn/
 
 [shopee.vn]
-match = -21.4%%
-title = Bộ ga gối trải giường 2m2x2m bo chun miễn phí, bộ ...
-url = https://shopee.vn/Bộ-ga-gối-trải-giường-2m2x2m-bo-chun-miễn-phí-bộ-ga-giường-cotton-poly-mềm-mịn-thấm-hút-mồ-hôi-Happy-Home-i.600110082.20851466621
+match = -32.1%%
+title = Bộ chăn ga gối, ga giường, vỏ chăn, vỏ gối drap nệm ga ...
+url = https://shopee.vn/Bộ-chăn-ga-gối-ga-giường-vỏ-chăn-vỏ-gối-drap-nệm-ga-chun-ra-giường-chăn-ga-gối-đệm-Happy-Home-i.600110082.15146634205
 
 [chandem.com.vn]
 match = 17.9%%
@@ -125,4 +125,14 @@ url = https://lynconcept.com/bo-chan-ga-goi-cotton-100-han-quoc-in-hinh-hoa-nho-
 match = -25.0%%
 title = Mua Chăn Ga Gối Cao Cấp - Đạt chuẩn chất lượng Châu Âu
 url = https://elmichsleep.vn/chan-ga-goi
+
+[www.changagoidemeveron.vn]
+match = 17.9%%
+title = Bộ chăn đông Everon Micro Poly MPE16
+url = http://www.changagoidemeveron.vn/3/everon/bo-chan-dong-everon-micro-poly-mpe-16.html
+
+[antbedding.com]
+match = 28.6%%
+title = Bộ Chăn Ga Gối Tencel Hoàng Gia H16
+url = https://antbedding.com/bo-chan-ga-goi-tencel-hoang-gia-h16
 
