--- a/images/chieu-dieu-hoa-lua-160x200/config.ini
+++ b/images/chieu-dieu-hoa-lua-160x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-lua-160x200.html
 lastopen = 2024-08-02 20:47:57
 
 [search]
-lastsearch = 2024-08-04 21:32:13
+lastsearch = 2024-08-04 23:32:35
 
 [demxanh.com]
 match = -15.4%%
 title = Chiếu điều hòa lụa cao cấp giá rẻ nhất thị trường
-url = https://demxanh.com/chieu-dieu-hoa-lua-cao-cap.html?srsltid=AfmBOoo4WjKSExIBNNARDM5Z7-E29cPqqj7KVzXclpxsOTAoHURPCY43
+url = https://demxanh.com/chieu-dieu-hoa-lua-cao-cap.html
 
 [thegioidemviet.vn]
 match = -15.4%%
@@ -19,12 +19,12 @@ url = https://thegioidemviet.vn/chieu-dieu-hoa-lua/
 [tiki.vn]
 match = -7.7%%
 title = Mua Chiếu Điều Hòa Cao Su Non Latex Loại 1 Màu
-url = https://tiki.vn/chieu-dieu-hoa-cao-su-non-latex-loai-1-mau-p136632708.html?spid=263307862
+url = https://tiki.vn/chieu-dieu-hoa-cao-su-non-latex-loai-1-mau-p136632708.html?spid=263307875
 
 [foreverbedding.net]
-match = -53.8%%
-title = Giải Đáp Thắc Mắc Nên Mua Chiếu Điều Hòa Hay Chiếu Trúc?
-url = https://foreverbedding.net/nen-mua-chieu-dieu-hoa-hay-chieu-truc?srsltid=AfmBOorN0O6_hY6xgeDn0xCufDXIVHLOPuP7JJdy6gpLXV7x5ip7Tt9w
+match = 38.5%%
+title = Chiếu điều hòa - Forever Bedding
+url = https://foreverbedding.net/chieu-dieu-hoa
 
 [chieutrelanlan.com]
 match = 42.3%%
@@ -44,7 +44,7 @@ url = https://shopee.vn/Chiếu-Điều-Hòa-Lụa-Dày-các-cỡ-1.2m-1.5m-1.6m
 [www.lazada.vn]
 match = 42.3%%
 title = Chiếu Lụa điều Hòa Giá Tốt T07/2024
-url = https://www.lazada.vn/tag/chiếu-lụa-điều-hòa/?srsltid=AfmBOorP2FVT4_ud7yPQfyxEn8HC6uNC_zRAWQYOJjRjdYptwp1EGa1V
+url = https://www.lazada.vn/tag/chiếu-lụa-điều-hòa/
 
 [nanara.vn]
 match = 7.7%%
