--- a/images/chieu-du-lich-18/config.ini
+++ b/images/chieu-du-lich-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-du-lich-18.html
 lastopen = 2024-06-09 21:46:31
 
 [search]
-lastsearch = 2024-08-04 21:15:30
+lastsearch = 2024-08-04 23:38:10
 
 [helloviettravel.com]
-match = -181.2%%
-title = Tour Xuyên Việt 18 ngày 17 đêm - Hello Vietnam Travel
-url = https://helloviettravel.com/tour-xuyen-viet-18-ngay-17-dem-2.html
+match = -150.0%%
+title = Tour xuyên Việt 21 ngày - Hello Việt Nam Travel
+url = https://helloviettravel.com/hlvn_xv12-du-lich-xuyen-viet-21-ngay-20-dem-khoi-hanh-tu-tp-hcm.html
 
 [saovangtravel.com]
 match = -50.0%%
@@ -19,7 +19,7 @@ url = http://saovangtravel.com/du-lich-x/du-lich-xuyen-viet-19-ngay-18-dem/
 [hanhhuonghoasen.com.vn]
 match = -50.0%%
 title = DU LỊCH XUYÊN VIỆT 18N17D GIÁ RẺ
-url = https://hanhhuonghoasen.com.vn/du-lich-xuyen-viet?srsltid=AfmBOooZ5B0Z8EKVC0xv1kPVrpoejgRNkJ5kjqiPLJz7Ar4M2G4wbi9Z
+url = https://hanhhuonghoasen.com.vn/du-lich-xuyen-viet
 
 [vtv.vn]
 match = -181.2%%
@@ -32,8 +32,8 @@ title = Du Lịch USA và Thế Giới
 url = https://www.facebook.com/groups/dulichusavathegioi/
 
 [vinpearl.com]
-match = -181.2%%
-title = Địa điểm du lịch Nghệ An - 18 tọa độ VUI CHƠI hấp dẫn nhất
+match = -156.2%%
+title = Hé lộ “tọa độ” 18 địa điểm du lịch Nghệ An HOT nhất!
 url = https://vinpearl.com/vi/he-lo-toa-do-18-dia-diem-du-lich-nghe-an-hot-nhat
 
 [thegioixecau.vn]
