--- a/images/chieu-gap-dai-loan-14/config.ini
+++ b/images/chieu-gap-dai-loan-14/config.ini
@@ -7,9 +7,9 @@ lastopen = 2024-06-09 22:43:30
 lastsearch = 2024-08-04 23:18:18
 
 [www.diepxuan.com]
-match = 14.3%%
-title = Chiếu gấp Đài Loan 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-gap-dai-loan-160x200.html
+match = 19.0%%
+title = Chiếu gấp Đài Loan 140x190 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-gap-dai-loan-140x190.html
 
 [www.youtube.com]
 match = -128.6%%
@@ -42,14 +42,14 @@ title = Hộ chiếu Đài Loan 2024 quyền lực như thế nào?
 url = https://taiwandiary.vn/2024/06/27/ho-chieu-dai-loan-2024-dung-thu-69/
 
 [www.roc-taiwan.org]
-match = 23.8%%
-title = THỜI GIAN NHẬN TRẢ HỒ SƠ
-url = https://www.roc-taiwan.org/vnsgn_vi/post/74.html
+match = -128.6%%
+title = Thông tin lãnh sự - Văn phòng Kinh tế và Văn hóa Đài Bắc ...
+url = https://www.roc-taiwan.org/vn_vi/cat/47.html
 
 [www.facebook.com]
-match = -23.8%%
-title = Raohe Ẩm Thực Đài | Ho Chi Minh City
-url = https://www.facebook.com/RaoheAmThucDai/
+match = -76.2%%
+title = Một Điều Ước sẽ khởi chiếu tại Đài Loan từ 21.06 và ...
+url = https://www.facebook.com/photo.php?fbid=1034453384709360&id=100044341243464&set=a.277234747097898
 
 [www.tripadvisor.com.vn]
 match = -42.9%%
@@ -77,9 +77,9 @@ title = Lịch bay Đài Loan 2024 - Tra cứu chuyến bay mới nhất ...
 url = https://www.bestprice.vn/ve-may-bay/lich-bay-dai-loan
 
 [visana.vn]
-match = -119.0%%
-title = Tất tần tật những điều cần biết về visa Quan Hồng Đài Loan
-url = https://visana.vn/visa-quan-hong-dai-loan/
+match = -114.3%%
+title = Trọn bộ hồ sơ, thủ tục xin visa Đài Loan mới nhất - VISANA
+url = https://visana.vn/visa-dai-loan/
 
 [www.tiktok.com]
 match = -19.0%%
