--- a/images/chieu-truc-thai-den14/config.ini
+++ b/images/chieu-truc-thai-den14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 lastopen = 2024-06-09 23:36:30
 
 [search]
-lastsearch = 2024-08-04 22:21:24
+lastsearch = 2024-08-04 23:36:45
 
 [www.diepxuan.com]
 match = 42.9%%
@@ -12,9 +12,9 @@ title = Chiếu trúc thai đen14 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 
 [demxanh.com]
-match = -28.6%%
-title = [Hot] Bảng giá Chiếu trúc khuyến mãi 2023
-url = https://demxanh.com/bang-gia-chieu-truc-2018.html
+match = 14.3%%
+title = Chiếu Trúc cao cấp hạt Đen - Hà Nội
+url = https://demxanh.com/chieu-truc-den.html
 
 [www.lazada.vn]
 match = -81.0%%
@@ -27,9 +27,9 @@ title = Chieu truc thai lan hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=chieu truc thai lan
 
 [chieutrelanlan.com]
-match = 9.5%%
-title = Chiếu trúc cao cấp Thái Lan 1m6x200cm
-url = https://chieutrelanlan.com/chieu-truc-cao-cap-thai-lan-1m6x2m-87.html
+match = -114.3%%
+title = Chiếu trúc thương hiệu Việt Nam, chất lượng tốt - Bảo hành ...
+url = https://chieutrelanlan.com/
 
 [www.youtube.com]
 match = -147.6%%
@@ -49,7 +49,7 @@ url = https://nhandan.vn/nguoi-dan-phan-khoi-vui-mung-khi-nhan-luong-huu-tro-cap
 [pctravinh.evnspc.vn]
 match = -90.5%%
 title = Trang thông tin điện tử - Công Ty Điện Lực Trà Vinh
-url = https://pctravinh.evnspc.vn/CMS_Article?AID=ARTICLE14030719&MID=F02-MNU202105-00000041
+url = https://pctravinh.evnspc.vn/CMS_Article?AID=ARTICLE14030719&MID=F02-MNU202105-00000007
 
 [baoapbac.vn]
 match = -47.6%%
