--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-08-04 21:38:30
+lastsearch = 2024-08-04 23:42:22
 
 [quizlet.com]
 match = -170.0%%
@@ -52,9 +52,9 @@ title = List of acupuncture points
 url = https://en.wikipedia.org/wiki/List_of_acupuncture_points
 
 [books.google.com]
-match = -280.0%%
-title = The Letter to Ren An and Sima Qian’s Legacy
-url = https://books.google.com/books?id=eCnvCwAAQBAJ&pg=PA170&lpg=PA170&dq=man+ren+16&source=bl&ots=0fsjQ-bqVd&sig=ACfU3U1QTveZ_1C0q3m_ZtGxKSymFVXy_Q&hl=en&sa=X&ved=2ahUKEwj2jP-OntuHAxVQMDQIHbdJDPQQ6AF6BAgZEAM
+match = -430.0%%
+title = Proceedings of the 10th West Coast Conference on Formal ...
+url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlgpPMsm7&sig=ACfU3U06ALILLsno5VM7kEc8EHCJEO2lKA&hl=en&sa=X&ved=2ahUKEwjOr_3049uHAxWJHkQIHT3hHOYQ6AF6BAgZEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
@@ -310,4 +310,9 @@ url = https://www.ncdhhs.gov/divisions/social-services/child-support-services/fr
 match = -130.0%%
 title = Ren | Oxenfree Wiki - Fandom
 url = https://oxenfree.fandom.com/wiki/Ren
+
+[yinyanghouse.com]
+match = 0.0%%
+title = 
+url = https://yinyanghouse.com/theory/acupuncturepoints/cv16/
 
