--- a/images/ruot-goi-ke-long-vu/config.ini
+++ b/images/ruot-goi-ke-long-vu/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-long-vu.html
 lastopen = 2024-06-09 23:56:32
 
 [search]
-lastsearch = 2024-08-04 17:23:35
+lastsearch = 2024-08-04 23:48:39
 
 [hanvico.net.vn]
 match = -42.1%%
@@ -54,7 +54,7 @@ url = https://aoiconcept.com/products/ruot-goi-nam-cao-cap-a-oi-concept-50x70cm-
 [jysk.vn]
 match = -94.7%%
 title = Ruột gối | lông vũ | GALDEBERGET | trắng | 50x70/75cm
-url = https://jysk.vn/ruot-goi-long-vu-galdeberget-trang-50x7075cm-750gr?srsltid=AfmBOoq9N31mjc0kIeD6dJG47YuKGJgHkBuBdQkCco8ti7LmmtJO7pUU
+url = https://jysk.vn/ruot-goi-long-vu-galdeberget-trang-50x7075cm-750gr
 
 [shopee.vn]
 match = -110.5%%
