CI images update

--- a/images/chieu-dieu-hoa-khong-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-14/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-14.html
 lastopen = 2024-06-09 22:26:37
 
 [search]
-lastsearch = 2024-08-04 22:53:59
+lastsearch = 2024-08-04 23:50:09
 
 [shopee.vn]
-match = -40.7%%
-title = Chiếu điều hòa mây lạnh cao cấp 2 lớp ( loại 1, có nhiều ...
-url = https://shopee.vn/Chiếu-điều-hòa-mây-lạnh-cao-cấp-2-lớp-(-loại-1-có-nhiều-loại-kích-thước)-không-kèm-vỏ-gối-i.17226131.25877940173
+match = 18.5%%
+title = Chiếu Điều Hòa Giá Tốt, Chất Lượng, Đảm Bảo
+url = https://shopee.vn/list/chiếu điều hòa
 
 [demxanh.com]
-match = 14.8%%
-title = Sử dụng chiếu điều hòa có tốt hay không?
-url = https://demxanh.com/su-dung-chieu-dieu-hoa-co-tot-hay-khong.html
+match = 22.2%%
+title = Chiếu điều hòa cao su non đa sắc tím than
+url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-da-sac-tim-than.html
 
 [tiki.vn]
 match = 33.3%%
@@ -58,8 +58,8 @@ url = https://khodem.vn/chieu-dieu-hoa-loai-nao-tot-3-loai-pho-bien/
 
 [sieuthidem.vn]
 match = 22.2%%
-title = Bộ chiếu điều hoà Tencel TC01 - Hà Nội
-url = https://sieuthidem.vn/san-pham/bo-chieu-dieu-hoa-tencel-tc01/
+title = Bộ chiếu điều hoà Tencel TC05 - Hà Nội
+url = https://sieuthidem.vn/san-pham/bo-chieu-dieu-hoa-tencel-tc05/
 
 [chieutrelanlan.com]
 match = 25.9%%
@@ -157,9 +157,9 @@ title = Sự thật về công dụng của chiếu điều hòa khiến ngườ
 url = https://www.congnghieptieudung.vn/su-that-ve-cong-dung-cua-chieu-dieu-hoa-khien-nguoi-dung-hieu-lam-dt34423
 
 [www.nemuytin.com]
-match = -22.2%%
-title = Chiếu điều hòa cao su non loại tốt - Mẫu 4 - Nệm Uy Tín
-url = https://www.nemuytin.com/product/chieu-dieu-hoa-cao-su-non-loai-tot-mau-4/
+match = -25.9%%
+title = Chiếu điều hòa cao su non loại tốt - Mẫu 5 - Nệm Uy Tín
+url = https://www.nemuytin.com/product/chieu-dieu-hoa-cao-su-non-loai-tot-mau-5/
 
 [joliefam.vn]
 match = -37.0%%
