--- a/images/chieu-nhua-ha-noi-du-lich-16/config.ini
+++ b/images/chieu-nhua-ha-noi-du-lich-16/config.ini
@@ -17,9 +17,9 @@ title = Chiếu nhựa chố giá tốt Tháng 8, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=Chiếu nhựa chố
 
 [tiki.vn]
-match = 3.6%%
-title = Chiếu nhựa gấp gọn hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=chiếu nhựa gấp gọn
+match = -21.4%%
+title = Chiếu nhựa việt nam 2mx4m hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=chiếu nhựa việt nam 2mx4m
 
 [www.yellowpages.vn]
 match = 0.0%%
