--- a/images/chieu-cay-ht-tre-em/config.ini
+++ b/images/chieu-cay-ht-tre-em/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-tre-em.html
 lastopen = 2024-06-06 16:42:52
 
 [search]
-lastsearch = 2024-08-04 20:16:40
+lastsearch = 2024-08-04 23:52:48
 
 [shopee.vn]
 match = -36.8%%
@@ -27,9 +27,9 @@ title = Chiếu trúc hạt nhỏ không viền màu vàng Size: 1mx1m9
 url = https://chieutrelinhchi.com/chieu-truc-1m/chieu-truc-hat-nho-khong-vien-mau-vang-1mx1m9-94.html
 
 [www.youtube.com]
-match = -115.8%%
-title = Ca Nhạc Thiếu Nhi Vui Nhộn 🌞Bé Khoẻ Bé Ngoan 🎵 Em Bé ...
-url = https://www.youtube.com/watch?v=ZCV14D2HeDA
+match = -121.1%%
+title = BÉ VUI HỌC VẦN ON AN - ĐỖ TUYẾT NHI - BÉ DÂU TÂY ...
+url = https://www.youtube.com/watch?v=-hnDASp_iC8
 
 [dochoihoangthu.com]
 match = -121.1%%
@@ -59,7 +59,7 @@ url = https://chieutrucsaigon.com/chieu-truc-tam/
 [www.lazada.vn]
 match = -84.2%%
 title = CHIẾU TRE , CHIẾU TRÚC MẮT NHỎ HẠT VÀNG DÒNG ...
-url = https://www.lazada.vn/products/chieu-tre-chieu-truc-mat-nho-hat-vang-dong-cao-cap-du-kich-thuoc-i251143269.html
+url = https://www.lazada.vn/products/chieu-tre-chieu-truc-mat-nho-hat-vang-dong-cao-cap-du-kich-thuoc-i251143269.html?srsltid=AfmBOoqL--IPY1WCkeqgb_3K60HbNLinKSn4uHPF82AcWyLv71VWR5YV
 
 [tiki.vn]
 match = -110.5%%
