--- a/images/chieu-truc-lieu-chau-16/config.ini
+++ b/images/chieu-truc-lieu-chau-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-lieu-chau-16.html
 lastopen = 2024-06-07 00:19:53
 
 [search]
-lastsearch = 2024-08-04 22:56:25
+lastsearch = 2024-08-04 23:55:52
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -24,7 +24,7 @@ url = https://chieutrelanlan.com/tim-hieu-ve-chieu-truc-n20.html
 [demxanh.com]
 match = -87.0%%
 title = Tư vấn mua chiếu trúc thanh chính hãng, giá rẻ tại Đệm Xanh
-url = https://demxanh.com/tu-van-mua-chieu-truc-thanh-chinh-hang-gia-re-tai-dem-xanh.html?srsltid=AfmBOopQZWi_pfbAK-WokKmKl2vR3faI2579DjC-4GXsTOnyrPktR8Xt
+url = https://demxanh.com/tu-van-mua-chieu-truc-thanh-chinh-hang-gia-re-tai-dem-xanh.html
 
 [www.dienmayxanh.com]
 match = -73.9%%
@@ -42,9 +42,9 @@ title = Chiếu tre - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
 url = https://shopee.vn/list/chiếu tre
 
 [www.youtube.com]
-match = -108.7%%
-title = Quanglinhvlogs || Chính Thức Hạ Cánh An Toàn Tại Angola ...
-url = https://www.youtube.com/watch?v=GED_n_XT5Kc
+match = -113.0%%
+title = Sạt lở đất gây sập nhà, hai vợ chồng ở Lạng Sơn tử vong ...
+url = https://www.youtube.com/watch?v=knyNrvqVtGo
 
 [hcmcpv.org.vn]
 match = -91.3%%
