--- a/images/tham-giuong-ii-160x200/config.ini
+++ b/images/tham-giuong-ii-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-160x200.html
 lastopen = 2024-06-17 21:09:12
 
 [search]
-lastsearch = 2024-08-04 22:42:02
+lastsearch = 2024-08-04 23:56:35
 
 [www.diepxuan.com]
 match = 27.3%%
@@ -12,9 +12,9 @@ title = Thảm giường Bode 160x200 - Điệp Xuân
 url = https://www.diepxuan.com/tham-giuong-bode-160x200.html
 
 [demxanh.com]
-match = -4.5%%
-title = Thảm trải giường cao su non màu hồng
-url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-hong.html
+match = -22.7%%
+title = Thảm trải giường cao su non màu xanh ngọc
+url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-xanh-ngoc.html
 
 [www.lazada.vn]
 match = -113.6%%
