--- a/images/vo-chan-ks-uc-24-23/config.ini
+++ b/images/vo-chan-ks-uc-24-23/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-24-23.html
 lastopen = 2024-06-10 00:37:18
 
 [search]
-lastsearch = 2024-08-04 21:45:05
+lastsearch = 2024-08-04 23:43:57
 
 [gobearcats.com]
 match = -142.1%%
@@ -132,9 +132,9 @@ title = licensed-electricians.pdf
 url = https://home.nyc.gov/assets/buildings/pdf/licensed-electricians.pdf
 
 [profiles.ucsd.edu]
-match = -41.7%%
-title = Tommi Gaines
-url = https://profiles.ucsd.edu/tommi.gaines
+match = -10.5%%
+title = Gary Vilke | UCSD Profiles
+url = https://profiles.ucsd.edu/gary.vilke
 
 [som.cuanschutz.edu]
 match = -121.1%%
@@ -312,9 +312,9 @@ title = GW170104: Observation of a 50-solar-mass binary black ...
 url = https://www.ligo.org/detections/GW170104/paper/GW170104-Supplement.pdf
 
 [www.ncbi.nlm.nih.gov]
-match = -200.0%%
-title = Triglyceride-rich lipoprotein lipolysis products increase blood ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5407020/
+match = -173.7%%
+title = Evaluation of the Extent of Variant Histology in Urothelial ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8988952/
 
 [www.ucdavis.edu]
 match = -52.6%%
