CI images update

--- a/images/chi-u-nh-a-thai-binh-10/config.ini
+++ b/images/chi-u-nh-a-thai-binh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chi-u-nh-a-thai-binh-10.html
 lastopen = 2024-06-09 22:17:45
 
 [search]
-lastsearch = 2024-08-04 21:12:07
+lastsearch = 2024-08-05 00:17:06
 
 [www.vesselfinder.com]
 match = -91.3%%
@@ -54,7 +54,7 @@ url = https://en.wikipedia.org/wiki/List_of_cities_in_Vietnam
 [books.google.com]
 match = -43.5%%
 title = Vietnam - Page 187 - Google Books Result
-url = https://books.google.com/books?id=kRi_BKq60OgC&pg=PA187&lpg=PA187&dq=chi+u+nh+a+thai+binh+10&source=bl&ots=UpYrZafQ3H&sig=ACfU3U0S6H-S15D0SS6gNRvSUOlZ9TMYpQ&hl=en&sa=X&ved=2ahUKEwjojKG2g9qHAxVMg4kEHdplDkwQ6AF6BAgiEAM
+url = https://books.google.com/books?id=kRi_BKq60OgC&pg=PA187&lpg=PA187&dq=chi+u+nh+a+thai+binh+10&source=bl&ots=UpYrZh7UZM&sig=ACfU3U31CBiJ8h1DnTUPfxlmiUXnMLSJGg&hl=en&sa=X&ved=2ahUKEwjbhsjW69uHAxXXElkFHastO8MQ6AF6BAgjEAM
 
 [www.travelweekly.com]
 match = -87.0%%
