--- a/images/chieu-nhua-ha-noi-du-lich-16/config.ini
+++ b/images/chieu-nhua-ha-noi-du-lich-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-16.html
 lastopen = 2024-06-09 23:14:36
 
 [search]
-lastsearch = 2024-08-04 23:39:56
+lastsearch = 2024-08-05 00:14:58
 
 [www.diepxuan.com]
-match = 39.3%%
-title = Chiếu nhựa Hà Nội du lịch 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-160x200.html
+match = 35.7%%
+title = Chiếu nhựa Hà Nội du lịch 180x200 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-180x200.html
 
 [shopee.vn]
 match = -3.6%%
@@ -22,9 +22,9 @@ title = Chiếu nhựa việt nam 2mx4m hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=chiếu nhựa việt nam 2mx4m
 
 [www.yellowpages.vn]
-match = 0.0%%
-title = danh sách Chiếu Nhựa
-url = https://www.yellowpages.vn/tgcls/10490435/Chiếu-Nhựa.html?j=0
+match = -5.3%%
+title = sản xuất chiếu nhựa
+url = https://www.yellowpages.vn/tgcls/40490435/sản-xuất-chiếu-nhựa.html?j=3
 
 [www.dienmayxanh.com]
 match = -35.7%%
@@ -37,9 +37,9 @@ title = LỊCH HỘI CHỢ VÀ TRIỂN LÃM THƯƠNG MẠI TẠI HÀ NỘI ...
 url = https://tradepro.vn/vi/hoi-cho-trien-lam/ha-noi
 
 [www.sendo.vn]
-match = 21.4%%
-title = Chiêú nhựa gấp gọn hàng việt nam - cgjbg
-url = https://www.sendo.vn/chieu-nhua-gap-gon-hang-viet-nam-40163361.html?source_block_id=feed&source_page_id=search&source_info=pwa_60_1722384000324_undefined_-1_cateLvl2_0_16_23_-1
+match = 17.9%%
+title = Chiếu nhựa nguyên sinh gấp gọn 1m8 x 3m
+url = https://www.sendo.vn/chieu-nhua-nguyen-sinh-gap-gon-1m8-x-3m-hang-viet-nam-chat-luong-cao-116062190.html
 
 [mia.vn]
 match = -7.1%%
