--- a/images/ga-chun-uc-16/config.ini
+++ b/images/ga-chun-uc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-uc-16.html
 lastopen = 2024-06-10 01:12:04
 
 [search]
-lastsearch = 2024-08-04 20:04:21
+lastsearch = 2024-08-05 00:22:17
 
 [bedding.vn]
 match = -123.1%%
@@ -37,9 +37,9 @@ title = Chun Lu
 url = https://scholar.google.co.uk/citations?user=ufM1QgQAAAAJ&hl=th
 
 [www.linkedin.com]
-match = -200.0%%
-title = Justin Chun - Irvine, California, United States
-url = https://www.linkedin.com/in/justin-chun-b9aa732b3
+match = -230.8%%
+title = Joanne Chun - University of California, San Francisco
+url = https://www.linkedin.com/in/joanne-k-chun
 
 [hanvico.com.vn]
 match = -69.2%%
@@ -57,9 +57,9 @@ title = Bộ ga chun Elegant H156 - Forever Bedding
 url = https://foreverbedding.net/bo-ga-chun-elegant-h156
 
 [www.instagram.com]
-match = -284.6%%
-title = UGA College of Public Health | For doctoral student Tzu ...
-url = https://www.instagram.com/p/C3au3yItjnC/?img_index=publichealthuga
+match = -100.0%%
+title = 𝐆𝐚 𝐂𝐡𝐮𝐧 𝐘𝐚𝐮 𝐏𝐡𝐨𝐭𝐨𝐠𝐫𝐚𝐩𝐡𝐲 (@gachunyau)
+url = https://www.instagram.com/gachunyau/?hl=en
 
 [pubmed.ncbi.nlm.nih.gov]
 match = -269.2%%
@@ -117,9 +117,9 @@ title = jack l. skinner, ph.d., pe
 url = https://www.mtech.edu/mechanical-engineering/faculty/jack-skinner/docs/cv-jack-skinner.pdf
 
 [researchdirectory.uc.edu]
-match = -292.3%%
-title = Chong Ahn - UC Research Directory - University of Cincinnati
-url = https://researchdirectory.uc.edu/p/ahnch
+match = -261.5%%
+title = Expert Profile: Je Hyeong Bahk - UC Research Directory
+url = https://researchdirectory.uc.edu/p/bahkjg
 
 [thegioinem.com]
 match = -230.8%%
