--- a/images/ga-phu-uc-16/config.ini
+++ b/images/ga-phu-uc-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ga-phu-uc-16.html
 lastopen = 2024-06-07 01:01:59
 
 [search]
-lastsearch = 2024-08-04 22:39:56
+lastsearch = 2024-08-05 00:26:32
 
 [us.misumi-ec.com]
 match = -325.0%%
 title = GA16-16-6 | Enclosures - ABS Box, Water/Dust Proof, GA ...
-url = https://us.misumi-ec.com/vona2/detail/222000229166/?HissuCode=GA16-16-6&srsltid=AfmBOorDwuMFN2fwv76JPFoMi9rOQEV7_nU99YHRrRBYhzDlRrSYOlIt
+url = https://us.misumi-ec.com/vona2/detail/222000229166/?HissuCode=GA16-16-6
 
 [www.amazon.com]
 match = -91.7%%
@@ -132,9 +132,9 @@ title = Obituary information for Margaret Holt Chapman
 url = https://www.whitsellfuneralhome.com/obituaries/Margaret-Holt-Chapman?obId=31564220
 
 [profiles.stanford.edu]
-match = -133.3%%
-title = Aaron Newman - Stanford Profiles
-url = https://profiles.stanford.edu/aaron-newman
+match = -108.3%%
+title = Ami Bhatt - Stanford Profiles
+url = https://profiles.stanford.edu/ami-bhatt
 
 [www.fivebranches.edu]
 match = -33.3%%
@@ -355,4 +355,9 @@ url = https://books.google.com/books?id=tTo9AAAAIAAJ&pg=RA1-PA24&lpg=RA1-PA24&dq
 match = -175.0%%
 title = 2022 UC Santa Cruz Commencement Program
 url = https://issuu.com/ucsccollegestudentlife/docs/commencement_program_2022_final
+
+[www.econ.umd.edu]
+match = -350.0%%
+title = ECON Home | ECON l Department of Economics l University ...
+url = https://www.econ.umd.edu/
 
