--- a/images/bo-ga-chun-chan-bon-mua-180x200-sh/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-180x200-sh/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-180x200-sh.html
 lastopen = 2024-06-07 00:25:35
 
 [search]
-lastsearch = 2024-08-04 14:15:30
+lastsearch = 2024-08-05 00:25:51
 
 [www.diepxuan.com]
 match = 17.6%%
@@ -12,9 +12,9 @@ title = Bộ chăn bốn mùa EPC21053 180x200 - Điệp Xuân
 url = https://www.diepxuan.com/bo-chan-bon-mua-epc21053-180x200.html
 
 [songhongonline.vn]
-match = 24.2%%
-title = Bộ chăn ga gối trẻ em SH_JC22 002
-url = https://songhongonline.vn/products/bo-chan-ga-goi-tre-em-sh-yc22-002
+match = 0.0%%
+title = Bộ sản phẩm SH_BC22 066
+url = https://songhongonline.vn/products/bo-san-pham-song-hong-sh-bc22-1
 
 [everon.online]
 match = 50.0%%
@@ -22,9 +22,9 @@ title = Bộ Ga Chun Chần Everon Bốn Mùa ...
 url = https://everon.online/collections/bo-ga-chun-chan-bon-mua-everon
 
 [antbedding.com]
-match = -10.5%%
-title = Bộ Chăn Ga Gối Eu04
-url = https://antbedding.com/bo-chan-ga-goi-eu04
+match = 23.5%%
+title = Bộ Chăn Ga Gối Tencel Hoàng Gia SH02
+url = https://antbedding.com/bo-chan-ga-goi-tencel-hoang-gia-sh02
 
 [shopee.vn]
 match = 50.0%%
@@ -67,8 +67,8 @@ title = Bộ Chăn Ga ES 1840
 url = https://tongdailyeveron.com.vn/products/bo-chan-ga-es1840
 
 [songhong.info]
-match = 2.9%%
-title = Dòng chăn ga gối Sông Hồng Basic mã mầu BC-04
+match = 17.6%%
+title = Dòng chăn ga gối cotton Basic mã BC-04
 url = https://songhong.info/chan-ga-goi-bc-04
 
 [kona.com.vn]
