--- a/images/chieu-truc-thai-den14/config.ini
+++ b/images/chieu-truc-thai-den14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 lastopen = 2024-06-09 23:36:30
 
 [search]
-lastsearch = 2024-08-04 23:36:45
+lastsearch = 2024-08-05 00:20:12
 
 [www.diepxuan.com]
 match = 42.9%%
@@ -27,9 +27,9 @@ title = Chieu truc thai lan hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=chieu truc thai lan
 
 [chieutrelanlan.com]
-match = -114.3%%
-title = Chiếu trúc thương hiệu Việt Nam, chất lượng tốt - Bảo hành ...
-url = https://chieutrelanlan.com/
+match = 9.5%%
+title = Chiếu trúc cao cấp Thái Lan 1m6x200cm
+url = https://chieutrelanlan.com/chieu-truc-cao-cap-thai-lan-1m6x2m-87.html
 
 [www.youtube.com]
 match = -147.6%%
@@ -532,9 +532,9 @@ title = Giá vàng: Trang chủ
 url = https://giavang.pnj.com.vn/
 
 [hanoionline.vn]
-match = -71.4%%
-title = Đài Hà Nội – Tin tức, văn hóa và đời sống Thủ đô
-url = https://hanoionline.vn/
+match = -76.2%%
+title = Công viên Cầu Giấy, điểm xanh trong lòng đô thị
+url = https://hanoionline.vn/video/cong-vien-cau-giay-diem-xanh-trong-long-do-thi-256258.htm
 
 [laodong.vn]
 match = -109.5%%
