--- a/images/ga-ni-long-14/config.ini
+++ b/images/ga-ni-long-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-14.html
 lastopen = 2024-06-10 00:50:06
 
 [search]
-lastsearch = 2024-08-04 23:54:29
+lastsearch = 2024-08-05 00:13:33
 
 [www.galottery.com]
 match = -7.7%%
@@ -214,7 +214,7 @@ url = https://blog.redbrand.com/12-5-gauge-barbed-wire-vs-14-gauge-barbed-wire-f
 [books.google.com]
 match = -161.5%%
 title = Crystal Data: Inorganic compounds 1967-1969
-url = https://books.google.com/books?id=QZkhAQAAMAAJ&pg=RA6-SA1-PA120&lpg=RA6-SA1-PA120&dq=ga+ni+long+14&source=bl&ots=o2gx-G31E2&sig=ACfU3U0QZBhQnDk-7bk1OSBMmgdc85W_aQ&hl=en&sa=X&ved=2ahUKEwi3r77P5tuHAxWnFVkFHUigKQ4Q6AF6BAgaEAM
+url = https://books.google.com/books?id=QZkhAQAAMAAJ&pg=RA6-SA1-PA120&lpg=RA6-SA1-PA120&dq=ga+ni+long+14&source=bl&ots=o2gx-G43zY&sig=ACfU3U3BWYwf-Z9GImBQw10AH6hMEv-fWw&hl=en&sa=X&ved=2ahUKEwj4p5Px6tuHAxVRM1kFHWgaPJAQ6AF6BAgYEAM
 
 [ottawabraves.com]
 match = -292.3%%
