--- a/images/tui-nem-korea-tuan-anh-14/config.ini
+++ b/images/tui-nem-korea-tuan-anh-14/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-14.html
 lastopen = 2024-06-17 10:43:32
 
 [search]
-lastsearch = 2024-08-04 22:34:27
+lastsearch = 2024-08-05 00:20:33
 
 [suongtuyet.com]
-match = -36.0%%
-title = Nệm Bông Ép Tuấn Anh Korea Vải Valize - Đà Nẵng
-url = https://suongtuyet.com/nem-bong-ep-tuan-anh-seong-san-vai-gam
+match = -4.0%%
+title = Nệm Gòn Ép Tuấn Anh Korea Plus Vải Gấm
+url = https://suongtuyet.com/nem-gon-ep-tuan-anh-korea-plus-vai-gam
 
 [tuananh.vn]
-match = 20.8%%
-title = Đệm Bông ép 2 mảnh Korea
-url = https://tuananh.vn/dem-bong-ep-2-manh-korea--p133.html
+match = 8.0%%
+title = Đệm bông ép 3 mảnh Korea Kaki
+url = https://tuananh.vn/dem-bong-ep-korea-kaki-p112.html
 
 [demxanh.com]
 match = -48.0%%
