CI images update

--- a/images/chan-3-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-3-k-tuyet-sin-thai-lan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-3-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-09 23:46:49
 
 [search]
-lastsearch = 2024-08-04 19:57:50
+lastsearch = 2024-08-05 00:42:25
 
 [shopee.vn]
 match = 7.4%%
@@ -12,9 +12,9 @@ title = CHĂN LÔNG TUYẾT NHUNG CAO CẤP Thái Lan Loại 4kg
 url = https://shopee.vn/CHĂN-LÔNG-TUYẾT-NHUNG-CAO-CẤP-Thái-Lan-Loại-4kg-i.126028938.4857799045
 
 [h5.lazada.vn]
-match = -33.3%%
-title = [CHUYÊN SỈ]🌺 chăn băng lông tuyết nhung, chăn thái sịn ...
-url = https://h5.lazada.vn/products/chuyen-si-chan-bang-long-tuyet-nhung-chan-thai-sin-cho-mua-dong-am-ap-loai-2kg3kg4kg5kg-xuonggaubong88-i2050625587-s9572474215.html
+match = -11.1%%
+title = Chăn Lông Tuyết Thái Sịn, Chăn Mền Mùa Đông Khổ ...
+url = https://h5.lazada.vn/products/chan-long-tuyet-thai-sin-chan-men-mua-dong-kho-rong-loai-2kg-3kg-4kg-5kg-size-17mx2m-2mx2m3-i2564626690-s12540487699.html
 
 [www.lazada.vn]
 match = -11.1%%
@@ -159,7 +159,7 @@ url = https://www.sendo.vn/men-long-tuyet.htm
 [www.bebong.vn]
 match = 36.4%%
 title = Chăn lông tuyết cho bé
-url = https://www.bebong.vn/products/chan-long-tuyet-cho-be?srsltid=AfmBOop1xeSrJOjQSISVEN4bv921S98FlR944agDzs3X_U7kM5Q58Mwg
+url = https://www.bebong.vn/products/chan-long-tuyet-cho-be
 
 [demxanh.com]
 match = -18.5%%
