--- a/images/nem-sieu-nhe-9f-14/config.ini
+++ b/images/nem-sieu-nhe-9f-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-14.html
 lastopen = 2024-06-10 00:53:20
 
 [search]
-lastsearch = 2024-08-04 23:43:06
+lastsearch = 2024-08-05 00:30:43
 
 [www.lazada.vn]
 match = -61.1%%
 title = Orangesky Cần Câu Cá Biển Yuantou ...
-url = https://www.lazada.vn/products/orangesky-can-cau-ca-bien-yuantou-can-cau-ca-yuantou-sieu-nhe-can-nem-can-cau-ca-yuantou-i2413511947.html
+url = https://www.lazada.vn/products/orangesky-can-cau-ca-bien-yuantou-can-cau-ca-yuantou-sieu-nhe-can-nem-can-cau-ca-yuantou-i2413511947.html?srsltid=AfmBOoqNpjhjAKoZ0G9OBO4F1vfsKb-QkymdQZb2L_9ltQBnh_QYgCEx
 
 [www.facebook.com]
 match = -11.1%%
@@ -37,9 +37,9 @@ title = CÙNG VÀO BẾP LÀM NEM NƯỚNG NHA TRANG SIÊU HẤP ...
 url = https://www.youtube.com/watch?v=guu4UvG6cKY
 
 [www.instagram.com]
-match = -127.8%%
-title = fuong's food | CUỐN NỘM CỰC CUỐN MIỆNG!!😝😝 —— ...
-url = https://www.instagram.com/p/COmtAgeH-He/
+match = -138.9%%
+title = Ăn-bởi-Long | [NEM NƯỚNG, CÁ BÒ, PHÔ MAI QUE CHỊ ...
+url = https://www.instagram.com/p/Bb9uTnaBRoV/
 
 [vietnamnet.vn]
 match = -144.4%%
@@ -54,12 +54,12 @@ url = https://www.tiktok.com/discover/nem-nuong-que-huong-air-fryer
 [www.diepxuan.com]
 match = 11.1%%
 title = Điệp Xuân Nệm siêu nhẹ
-url = https://www.diepxuan.com/nem-sieu-nhe.html
+url = https://www.diepxuan.com/nem-sieu-nhe.html?srsltid=AfmBOoqRZSseXt9XucLwsaEs0G_kZPTcHPMK9f0BoFdPXE5c2tRydJ_w
 
 [m.facebook.com]
-match = -100.0%%
-title = Người Việt ở Seattle | 🔥🔥🔥 𝐌𝐚̆́𝐦 𝐧𝐞̂𝐦 𝐃𝐢̀ 𝐂𝐚̂̉𝐧 Đ𝐚̀ ...
-url = https://m.facebook.com/groups/nguoivietseattle.usa/posts/2080619245611358/
+match = -122.2%%
+title = Người Việt Bolsa/Orange County | 🌮NEM CHUA THANH ...
+url = https://m.facebook.com/groups/nguoivietorangecounty/posts/2900660673417630/
 
 [emartmall.com.vn]
 match = 0.0%%
