--- a/images/chieu-dieu-hoa-khong-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-14/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-14.html
 lastopen = 2024-06-09 22:26:37
 
 [search]
-lastsearch = 2024-08-04 23:50:09
+lastsearch = 2024-08-05 00:43:48
 
 [shopee.vn]
-match = 18.5%%
-title = Chiếu Điều Hòa Giá Tốt, Chất Lượng, Đảm Bảo
-url = https://shopee.vn/list/chiếu điều hòa
+match = -33.3%%
+title = Chiếu điều hoà Muji lót lụa cao cấp hàng loại 1 ( không ...
+url = https://shopee.vn/Chiếu-điều-hoà-Muji-lót-lụa-cao-cấp-hàng-loại-1-(-không-kèm-vỏ-gối)-i.19058947.8867361209
 
 [demxanh.com]
-match = 22.2%%
-title = Chiếu điều hòa cao su non đa sắc tím than
-url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-da-sac-tim-than.html
+match = 14.8%%
+title = Sử dụng chiếu điều hòa có tốt hay không?
+url = https://demxanh.com/su-dung-chieu-dieu-hoa-co-tot-hay-khong.html
 
 [tiki.vn]
 match = 33.3%%
