--- a/images/tham-chan-len-xu-1-50x80/config.ini
+++ b/images/tham-chan-len-xu-1-50x80/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-chan-len-xu-1-50x80.html
 lastopen = 2024-06-07 00:36:50
 
 [search]
-lastsearch = 2024-08-04 23:50:28
+lastsearch = 2024-08-05 00:28:16
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -12,14 +12,14 @@ title = Thảm chân len xù 1 50x80
 url = https://www.diepxuan.com/tham-chan-len-xu-1-50x80.html
 
 [tiki.vn]
-match = -33.3%%
-title = Thảm lau chân ULRIC màu Xám Trắng / Nâu 50x80 cm ...
-url = https://tiki.vn/tham-lau-chan-ulric-mau-xam-trang-nau-50x80-cm-100-cotton-index-living-mall-nhap-khau-thai-lan-p272045000.html?spid=272045002
+match = -41.7%%
+title = Tham chui chan 60x80 hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=tham chui chan 60x80
 
 [shopee.vn]
-match = -12.5%%
-title = thảm lau chân chống trơn trượt kích thước 50x80
-url = https://shopee.vn/Thảm-lau-chân-siêu-thấm-hút-nước-5s-thảm-lau-chân-chống-trơn-trượt-kích-thước-50x80-i.351179465.22661027123
+match = -41.7%%
+title = Thảm chùi chân chữ HOME cỡ 50x80, thấm hút phong ...
+url = https://shopee.vn/Thảm-chùi-chân-chữ-HOME-cỡ-50x80-thấm-hút-phong-cách-Nhật-Bản-i.66569981.10269870886
 
 [lepetit.com.vn]
 match = -79.2%%
@@ -37,9 +37,9 @@ title = Thảm lót cửa sợi mịn Shaggy
 url = https://thamht.vn/products/nhan-ban-cua-tham-chui-chan-shaggy-hinh-thoi
 
 [cauhaihomedecor.vn]
-match = 62.5%%
-title = THẢM CHÂN ARTHUR 50X80CM
-url = https://cauhaihomedecor.vn/tham-chan-arthur
+match = 58.3%%
+title = THẢM CHÂN WONDERFUL 50X80CM
+url = https://cauhaihomedecor.vn/tham-chan-wonderful
 
 [www.khotham.com]
 match = -62.5%%
@@ -72,8 +72,8 @@ title = THẢM CHÙI CHÂN NỈ CỠ LỚN KT 1,2m*1,8m Lau ...
 url = https://h5.lazada.vn/products/tham-chui-chan-ni-co-lon-kt-12m18m-lau-chan-soi-len-de-cao-su-chong-tron-truot-dung-cho-sanh-van-phong-toa-nha-khach-san-hien-dai-sang-trong-tham-trai-san-tham-tri-tai-i1910157563.html
 
 [comehome.com.vn]
-match = -62.5%%
-title = Thảm phòng khách - Thảm trải sàn chất lượng, giá tốt
+match = -66.7%%
+title = Thảm phòng khách đẹp, thảm trải sàn trang trí giá tốt
 url = https://comehome.com.vn/phu-kien/san-pham-det-may/tham.html
 
 [sieuthidienmaypico.com]
