CI images update

--- a/images/chan-long-muji/config.ini
+++ b/images/chan-long-muji/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-long-muji.html
 lastopen = 2024-07-01 21:12:38
 
 [search]
-lastsearch = 2024-08-04 23:58:25
+lastsearch = 2024-08-05 00:52:55
 
 [www.muji.com]
-match = -33.3%%
-title = RUỘT CHĂN
-url = https://www.muji.com/vn/products/section/E30001
+match = 7.1%%
+title = chăn lông nhung xám mỏng
+url = https://www.muji.com/vn/vi/shop/000101/articles/recommend/1221
 
 [thegioidemviet.vn]
 match = -192.9%%
@@ -19,7 +19,7 @@ url = https://thegioidemviet.vn/chan-dong-long-vu-muji/
 [demxanh.com]
 match = -135.7%%
 title = Chăn tuyết Muji 01 | Chăn lông tuyết cao cấp
-url = https://demxanh.com/chan-tuyet-muji-01.html?srsltid=AfmBOornNGl1-CxCGW5sj7ZJ_TuliDuWSS_N4oKRHbw1MLzEtJCAP1s9
+url = https://demxanh.com/chan-tuyet-muji-01.html
 
 [www.youtube.com]
 match = -14.3%%
