--- a/images/chi-u-nh-a-thai-binh-10/config.ini
+++ b/images/chi-u-nh-a-thai-binh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chi-u-nh-a-thai-binh-10.html
 lastopen = 2024-06-09 22:17:45
 
 [search]
-lastsearch = 2024-08-05 00:17:06
+lastsearch = 2024-08-05 00:56:03
 
 [www.vesselfinder.com]
 match = -91.3%%
@@ -47,9 +47,9 @@ title = ESL TEACHER : Changing School without leaving Vietnam
 url = https://www.expat.com/forum/viewtopic.php?id=994131
 
 [en.wikipedia.org]
-match = 17.4%%
-title = List of cities in Vietnam
-url = https://en.wikipedia.org/wiki/List_of_cities_in_Vietnam
+match = -38.5%%
+title = Ngo Dinh Diem
+url = https://en.wikipedia.org/wiki/Ngo_Dinh_Diem
 
 [books.google.com]
 match = -43.5%%
@@ -58,8 +58,8 @@ url = https://books.google.com/books?id=kRi_BKq60OgC&pg=PA187&lpg=PA187&dq=chi+u
 
 [www.travelweekly.com]
 match = -87.0%%
-title = Ho Chi Minh City Hotels Near Jade Emperor Pagoda- Page 10
-url = https://www.travelweekly.com/Hotels/Ho-Chi-Minh-City-Vietnam/Hotels-Near-Jade-Emperor-Pagoda-p4247472?s=2+u3NLAzhVE=u&pg=10
+title = Hotels Near Roseland Corp Hotel, Ho Chi Minh City- Page 10
+url = https://www.travelweekly.com/Hotels/Ho-Chi-Minh-City-Vietnam/Roseland-Corp-Hotel-p55100311,Nearby-Hotels?pg=10
 
 [sonoivu.thaibinh.gov.vn]
 match = -78.3%%
