--- a/images/chieu-cay-moc-hoa16/config.ini
+++ b/images/chieu-cay-moc-hoa16/config.ini
@@ -49,7 +49,7 @@ url = https://books.google.com/books?id=oC8iDAAAQBAJ&pg=PA325&lpg=PA325&dq=chieu
 [www.diepxuan.com]
 match = 5.3%%
 title = Chiếu cây mộc hoa 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-moc-hoa-160x200.html
+url = https://www.diepxuan.com/chieu-cay-moc-hoa-160x200.html?srsltid=AfmBOopeNargM16hOhPzgL03GXsGlzqybrihFuVxd6ImK-NUP1blkw9d
 
 [mietistudio.com]
 match = -131.6%%
@@ -345,4 +345,9 @@ url = https://bongspa.com/
 match = -115.8%%
 title = Hoa nở là điềm lành nhưng 4 cây này bỗng dưng ra ...
 url = https://tintuconline.com.vn/nha-dep/hoa-no-la-diem-lanh-nhung-4-cay-nay-bong-dung-ra-hoa-lai-la-diem-go-n-545218.html
+
+[baotayninh.vn]
+match = -47.4%%
+title = Cây cao bóng cả - Báo Tây Ninh Online
+url = https://baotayninh.vn/cay-cao-bong-ca-a176632.html
 
