--- a/images/ga-ni-long-18/config.ini
+++ b/images/ga-ni-long-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-18.html
 lastopen = 2024-06-09 23:39:01
 
 [search]
-lastsearch = 2024-08-04 23:17:57
+lastsearch = 2024-08-05 00:52:36
 
 [www.zillow.com]
 match = -69.2%%
@@ -472,9 +472,9 @@ title = Translate from English to Filipino
 url = https://www.bing.com/translator?from=en&to=fil
 
 [www.nature.com]
-match = -230.8%%
-title = 68 Ga generator based on nano-SnO 2 for PET imaging
-url = https://www.nature.com/articles/s41598-020-69659-8
+match = -338.5%%
+title = Solid-state surfactant templating for controlled synthesis of ...
+url = https://www.nature.com/articles/s41467-024-51040-2
 
 [kuseahawks.com]
 match = -330.8%%
