--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-08-04 23:42:22
+lastsearch = 2024-08-05 01:00:13
 
 [quizlet.com]
 match = -170.0%%
@@ -54,7 +54,7 @@ url = https://en.wikipedia.org/wiki/List_of_acupuncture_points
 [books.google.com]
 match = -430.0%%
 title = Proceedings of the 10th West Coast Conference on Formal ...
-url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlgpPMsm7&sig=ACfU3U06ALILLsno5VM7kEc8EHCJEO2lKA&hl=en&sa=X&ved=2ahUKEwjOr_3049uHAxWJHkQIHT3hHOYQ6AF6BAgZEAM
+url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlgpQHpj8&sig=ACfU3U3mVXiQMlR96qIvqXGnu7DbIN_WHQ&hl=en&sa=X&ved=2ahUKEwiXmp2o9duHAxVbke4BHR4VAvwQ6AF6BAgXEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
