--- a/images/nem-caosu-lien-a-160x200x10/config.ini
+++ b/images/nem-caosu-lien-a-160x200x10/config.ini
@@ -24,7 +24,7 @@ url = https://fefurniture.com.vn/products/nem-cao-su-thien-nhien-lien-a-classic
 [demxanh.com]
 match = -11.1%%
 title = [Hot] Bảng giá nệm cao su Liên Á khuyến mãi 2024
-url = https://demxanh.com/bang-gia-nem-cao-su-lien-a-2018.html
+url = https://demxanh.com/bang-gia-nem-cao-su-lien-a-2018.html?srsltid=AfmBOoouHX1FoNf9H03xyqqheOvzgwcJbSkWMVfjj6_icSMO8DTN8mda
 
 [www.thegioinemvip.com]
 match = 0.0%%
@@ -34,7 +34,7 @@ url = https://www.thegioinemvip.com/nem-cao-su-lien-a-classic-new-160x200x10cm-g
 [www.lazada.vn]
 match = -7.4%%
 title = Nệm Cao su Liên Á Classic 160x200x10. Tặng kèm cover ...
-url = https://www.lazada.vn/products/nem-cao-su-lien-a-classic-160x200x10-tang-kem-cover-bao-ve-nem-i536998043.html
+url = https://www.lazada.vn/products/nem-cao-su-lien-a-classic-160x200x10-tang-kem-cover-bao-ve-nem-i536998043.html?srsltid=AfmBOorzCpyvfEjcJp940ekiwXah7s8eQKMI_qEppoA5FAMV4J_b05QF
 
 [tiki.vn]
 match = -11.1%%
