--- a/images/nem-pyeoda-thuong-16/config.ini
+++ b/images/nem-pyeoda-thuong-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-pyeoda-thuong-16.html
 lastopen = 2024-06-18 17:43:07
 
 [search]
-lastsearch = 2024-08-04 22:56:06
+lastsearch = 2024-08-05 00:53:36
 
 [changagoidemtamhao.com]
 match = -5.0%%
@@ -17,9 +17,9 @@ title = Bộ chăn ga gối Singapore Gold 5 gối Pyeoda 16
 url = https://demsingapore.com/bo-chan-ga-goi-singapore-5-goi-gold-pyeoda-16.html
 
 [demxanh.com]
-match = -70.0%%
-title = Chăn ga gối Singapore Pyeoda LCHARME gấm 7 món
-url = https://demxanh.com/chan-ga-goi-singapore-pyeoda-lcharme-gam-7-mon.html
+match = -40.0%%
+title = Chăn ga gối Tencel Pyeoda Hàn Quốc đa sắc
+url = https://demxanh.com/chan-ga-goi-tencel-pyeoda-han-quoc-da-sac.html
 
 [www.facebook.com]
 match = -75.0%%
