--- a/images/ruot-goi-ke-korea-45x65/config.ini
+++ b/images/ruot-goi-ke-korea-45x65/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-goi-ke-korea-45x65.html
 lastopen = 2024-08-02 00:29:53
 
 [search]
-lastsearch = 2024-08-04 20:44:09
+lastsearch = 2024-08-05 00:48:03
 
 [demxanh.com]
 match = -47.8%%
 title = Ruột gối Olympia khuyến mãi giá rẻ nhất thị trường
-url = https://demxanh.com/ruot-goi-olympia.html?srsltid=AfmBOopZGFwWJ0fGUFpJlDdmI8D4bK9hl__sq7tCO2jiQ_svidzzfD-z
+url = https://demxanh.com/ruot-goi-olympia.html
 
 [sieuthidemonline.vn]
 match = -17.4%%
@@ -24,7 +24,7 @@ url = https://shopee.vn/Combo-2-ruột-gối-korea-cao-cấp-ép-hơi-kích-thư
 [everonvn.com.vn]
 match = -82.6%%
 title = Ruột Gối Chống Ngáy Everon Chính Hãng Hàn Quốc bảng ...
-url = https://everonvn.com.vn/everon/76/ruot-goi-chong-ngay?srsltid=AfmBOooh3D_zKRy37gdtR9ILU8J-9PCQwj8YfRc6V9tDQ1dJjhQGFVqd
+url = https://everonvn.com.vn/everon/76/ruot-goi-chong-ngay
 
 [thegioidemviet.vn]
 match = -21.7%%
@@ -43,8 +43,8 @@ url = https://thegioidemonline.com/ruot-goi-bong.html
 
 [www.diepxuan.com]
 match = 21.7%%
-title = Ruột gối kê Warmdream 45x65 - Điệp Xuân
-url = https://www.diepxuan.com/ruot-goi-ke-warmdream-45x65.html?srsltid=AfmBOoqfstnTBCj0NgCyS1pANxPj8shFRelBGX2gkhHwdy-aGGSwjeLA
+title = Điệp Xuân Ruột gối kê Everhome M 45x65
+url = https://www.diepxuan.com/ruot-goi-ke-everhome-m-45x65.html
 
 [tiki.vn]
 match = -60.9%%
