CI images update

--- a/images/ruot-goi-ke-hoa-45x65/config.ini
+++ b/images/ruot-goi-ke-hoa-45x65/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-hoa-45x65.html
 lastopen = 2024-08-01 06:54:03
 
 [search]
-lastsearch = 2024-08-05 00:37:32
+lastsearch = 2024-08-05 01:25:41
 
 [www.everonvn.vn]
 match = 66.7%%
@@ -27,9 +27,9 @@ title = Bảng giá mẫu ruột gối 45x65 Elambo ưu đãi và tốt nhất
 url = https://elambo.vn/ruot-goi-45x65-cm/
 
 [suongtuyet.com]
-match = -38.1%%
-title = Ruột Gối Bông Dày - Standard Everon 45 x 65 cm
-url = https://suongtuyet.com/ruot-goi-standard-everon-45-x-65-cm
+match = -33.3%%
+title = Ruột Gối Bông Thấp - Classic Everon 45 x 65 cm
+url = https://suongtuyet.com/ruot-goi-dai-everon-45-x-65-cm
 
 [www.lazada.vn]
 match = -85.7%%
