--- a/images/chan-hoi-to-ong/config.ini
+++ b/images/chan-hoi-to-ong/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-to-ong.html
 lastopen = 2024-06-09 23:18:52
 
 [search]
-lastsearch = 2024-08-04 23:26:55
+lastsearch = 2024-08-05 01:23:59
 
 [www.instagram.com]
 match = -173.3%%
@@ -37,9 +37,9 @@ title = Dr CHAN Hoi Huen
 url = https://www.eduhk.hk/ses/web_uat/staff_detail.php?id=60&name=chanhh
 
 [en.wikipedia.org]
-match = 0.0%%
-title = Bong Joon-ho
-url = https://en.wikipedia.org/wiki/Bong_Joon-ho
+match = 6.7%%
+title = Cantonese profanity
+url = https://en.wikipedia.org/wiki/Cantonese_profanity
 
 [www.soc.cuhk.edu.hk]
 match = 50.0%%
@@ -270,4 +270,9 @@ url = https://www.tiktok.com/@mrsbahngchanshi/video/7143931181619252507
 match = -240.0%%
 title = Hoi Chan draws on scientific illustrations to create 'muted ...
 url = https://www.creativeboom.com/inspiration/hoi-chan/
+
+[www.ncbi.nlm.nih.gov]
+match = -240.0%%
+title = The SMJ Editorial Board would like to thank our reviewers ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9251213/
 
