--- a/images/nem-caosu-thien-nhien-140x200x10-felix/config.ini
+++ b/images/nem-caosu-thien-nhien-140x200x10-felix/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-caosu-thien-nhien-140x200x10-felix.html
 lastopen = 2024-06-07 00:21:32
 
 [search]
-lastsearch = 2024-08-04 23:13:26
+lastsearch = 2024-08-05 01:18:09
 
 [thefelix.vn]
-match = -50.0%%
-title = Nệm Cao Su Felix
-url = https://thefelix.vn/collections/nem-cao-su-felix
+match = -2.6%%
+title = Nệm cao su Felix Comfort - Độ cứng tiêu chuẩn (Cấp độ 1)
+url = https://thefelix.vn/products/nem-cao-su-felix-premium-comfort-10cm
 
 [nemkhanganh.com]
 match = 47.4%%
@@ -17,9 +17,9 @@ title = Nệm cao su thiên nhiên Felix - Nệm Khang Anh
 url = https://nemkhanganh.com/san-pham/nem-cao-su-thien-nhien-felix/
 
 [www.facebook.com]
-match = 31.6%%
-title = Felix - Nệm cao su thiên nhiên | Ho Chi Minh City
-url = https://www.facebook.com/thefelix.vn/
+match = 13.3%%
+title = Felix - Nệm cao su thiên nhiên
+url = https://www.facebook.com/photo.php?fbid=722111676746654&id=100068434838834&set=a.413784520912706
 
 [shopee.vn]
 match = 36.8%%
@@ -47,9 +47,9 @@ title = Mua Nệm Cao Su Thiên Nhiên Felix
 url = https://tiki.vn/nem-felix-100-cao-su-tu-nhien-do-nang-do-toi-uu-cho-giac-ngu-ngon-bao-hanh-1-thap-ky-101-dem-trai-nghiem-p136201001.html
 
 [m.facebook.com]
-match = 13.3%%
-title = Felix - Nệm cao su thiên nhiên
-url = https://m.facebook.com/100068434838834/photos/669183228706166/
+match = 2.6%%
+title = [NỆM CAO CẤP GIÁ XƯỞNG] NỆM CAO SU THIÊN NHIÊN ...
+url = https://m.facebook.com/100068434838834/videos/770305028495902/?__so__=permalink
 
 [edena.vn]
 match = 3.7%%
