--- a/images/tham-chan-len-xu-1-50x80/config.ini
+++ b/images/tham-chan-len-xu-1-50x80/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-chan-len-xu-1-50x80.html
 lastopen = 2024-06-07 00:36:50
 
 [search]
-lastsearch = 2024-08-05 00:28:16
+lastsearch = 2024-08-05 01:18:50
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -17,9 +17,9 @@ title = Tham chui chan 60x80 hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=tham chui chan 60x80
 
 [shopee.vn]
-match = -41.7%%
-title = Thảm chùi chân chữ HOME cỡ 50x80, thấm hút phong ...
-url = https://shopee.vn/Thảm-chùi-chân-chữ-HOME-cỡ-50x80-thấm-hút-phong-cách-Nhật-Bản-i.66569981.10269870886
+match = -12.5%%
+title = thảm lau chân chống trơn trượt kích thước 50x80
+url = https://shopee.vn/Thảm-lau-chân-siêu-thấm-hút-nước-5s-thảm-lau-chân-chống-trơn-trượt-kích-thước-50x80-i.351179465.22661027123
 
 [lepetit.com.vn]
 match = -79.2%%
@@ -37,9 +37,9 @@ title = Thảm lót cửa sợi mịn Shaggy
 url = https://thamht.vn/products/nhan-ban-cua-tham-chui-chan-shaggy-hinh-thoi
 
 [cauhaihomedecor.vn]
-match = 58.3%%
-title = THẢM CHÂN WONDERFUL 50X80CM
-url = https://cauhaihomedecor.vn/tham-chan-wonderful
+match = 62.5%%
+title = THẢM CHÂN ARTHUR 50X80CM
+url = https://cauhaihomedecor.vn/tham-chan-arthur
 
 [www.khotham.com]
 match = -62.5%%
