CI images update

--- a/images/chieu-lac-soc-08/config.ini
+++ b/images/chieu-lac-soc-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-08.html
 lastopen = 2024-06-06 16:42:06
 
 [search]
-lastsearch = 2024-08-05 00:35:21
+lastsearch = 2024-08-05 01:33:52
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -17,9 +17,9 @@ title = Hướng dẫn đo size lắc và vòng tay
 url = https://www.pnj.com.vn/blog/huong-dan-do-size-lac-va-vong-tay/
 
 [www.facebook.com]
-match = -187.5%%
-title = 21-08-2023 Thời sự chiều 18h30 | By Truyền Hình Sóc Trăng
-url = https://www.facebook.com/soctrangtv/videos/21-08-2023-thời-sự-chiều-18h30/1110320116612660/
+match = -131.2%%
+title = CHƯƠNG TRÌNH LỤC LẠC VÀNG VẾ VỚI XÃ MỸ THUẬN ...
+url = https://www.facebook.com/soctrangtv/videos/chương-trình-lục-lạc-vàng-vế-với-xã-mỹ-thuận-huyện-mỹ-tú-tỉnh-sóc-trăng-phát-són/1649583821733030/
 
 [thuvienphapluat.vn]
 match = -206.2%%
@@ -222,9 +222,9 @@ title = xôi lạc 31 - luật bóng ném - V2.5.2
 url = https://delhidentalcouncil.in/iosyospqc/28617987/
 
 [stockbiz.vn]
-match = -87.5%%
-title = Blog chứng khoán: Cú rung lắc “để đời”!
-url = https://stockbiz.vn/tin-tuc/blog-chung-khoan-cu-rung-lac-de-doi/26938417
+match = -68.8%%
+title = Xu thế dòng tiền: Bắt đáy được chưa?
+url = https://stockbiz.vn/tin-tuc/xu-the-dong-tien-bat-day-duoc-chua/27378153
 
 [cafebiz.vn]
 match = -212.5%%
@@ -855,4 +855,9 @@ url = https://dti.gov.vn/
 match = -156.2%%
 title = Giá vàng hôm nay (4-8): Chuyên gia lạc quan về ...
 url = https://baokhanhhoa.vn/kinh-te/thi-truong/202408/gia-vang-hom-nay-4-8-chuyen-gia-lac-quan-ve-vang-trong-ngan-han-5603169/
+
+[www.hawacom.vn]
+match = -187.5%%
+title = Công ty nước sạch Hà Nội | Hanoi Water Limited Company
+url = http://www.hawacom.vn/
 
