--- a/images/ga-ni-long-2m-x-2m2/config.ini
+++ b/images/ga-ni-long-2m-x-2m2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-2m-x-2m2.html
 lastopen = 2024-06-09 23:13:19
 
 [search]
-lastsearch = 2024-08-05 00:42:04
+lastsearch = 2024-08-05 01:40:47
 
 [www.diepxuan.com]
 match = 36.8%%
@@ -12,14 +12,14 @@ title = Ga ni lông 2m x 2m2 - Điệp Xuân
 url = https://www.diepxuan.com/ga-ni-long-2m-x-2m2.html
 
 [shopee.vn]
-match = 21.1%%
-title = GA CHỐNG THẤM CAO CẤP 2m x 2m2
-url = https://shopee.vn/GA-CHỐNG-THẤM-CAO-CẤP-2m-x-2m2-i.236450460.21023762253
+match = -57.9%%
+title = Ga Chống Thấm 2m x 2m2( giao màu ngẫu nhiên)
+url = https://shopee.vn/Ga-Chống-Thấm-2m-x-2m2(-giao-màu-ngẫu-nhiên)-i.65265925.2337418304
 
 [www.lazada.vn]
 match = -136.8%%
 title = Bộ chăn ga nỉ lông tim cao cấp, bộ ga giường nỉ nhung 4 ...
-url = https://www.lazada.vn/products/bo-chan-ga-ni-long-tim-cao-cap-bo-ga-giuong-ni-nhung-4-mon-phu-chun-1m-1m2-1m4-1m5-1m6-1m8-2mx2m-2m2-i2323748729.html?srsltid=AfmBOor5262pSeJU3I9yeufxAheF3x8w4rMbvS0s_PjQZoE11uO97ki_
+url = https://www.lazada.vn/products/bo-chan-ga-ni-long-tim-cao-cap-bo-ga-giuong-ni-nhung-4-mon-phu-chun-1m-1m2-1m4-1m5-1m6-1m8-2mx2m-2m2-i2323748729.html
 
 [demgiare.net]
 match = 5.3%%
