--- a/images/nem-everon-140x200x9/config.ini
+++ b/images/nem-everon-140x200x9/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-140x200x9.html
 lastopen = 2024-06-06 17:10:12
 
 [search]
-lastsearch = 2024-08-04 18:50:31
+lastsearch = 2024-08-05 01:37:58
 
 [www.everonvn.vn]
 match = -120.0%%
@@ -22,9 +22,9 @@ title = Đệm bông ép Everon
 url = https://everon.online/products/dem-bong-ep-everon
 
 [elec-horeca.com]
-match = 10.0%%
-title = Đại Lý Nệm Everon tại Đà Nẵng
-url = https://elec-horeca.com/dai-ly-nem-everon-tai-da-nang-id279.html
+match = 15.0%%
+title = Nệm lò xo everon tại Đà Nẵng
+url = https://elec-horeca.com/nem-lo-xo-everon-tai-da-nang-id280.html
 
 [tiki.vn]
 match = -20.0%%
@@ -92,9 +92,9 @@ title = Amazon.com: Customer Questions & Answers
 url = https://www.amazon.com/ask/questions/asin/B00IGBDXEA
 
 [demxanh.com]
-match = -115.0%%
-title = [HOT] Bảng giá nệm foam Oyasumi khuyến mại năm 2024
-url = https://demxanh.com/bang-gia-nem-foam-oyasumi.html
+match = -110.0%%
+title = Bảng giá đệm bông ép Everhome khuyến mãi mới nhất ...
+url = https://demxanh.com/bang-gia-dem-bong-ep-everhome-nam-2023.html
 
 [thegioinem.com]
 match = -133.3%%
