--- a/images/nem-sieu-nhe-9f-15/config.ini
+++ b/images/nem-sieu-nhe-9f-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-15.html
 lastopen = 2024-06-10 00:49:22
 
 [search]
-lastsearch = 2024-08-04 23:20:21
+lastsearch = 2024-08-05 01:43:18
 
 [www.lazada.vn]
 match = -94.4%%
@@ -12,9 +12,9 @@ title = Nệm Siêu Nhẹ Giá Tốt T07/2024 | Mua tại Lazada.vn
 url = https://www.lazada.vn/tag/nem-sieu-nhe/
 
 [m.facebook.com]
-match = -161.1%%
-title = Người Việt Bolsa/Orange County | 💥💥💥 Nem chua lá ổi Bình Định
-url = https://m.facebook.com/groups/nguoivietorangecounty/posts/2885626441587720/
+match = -100.0%%
+title = HỆ THỐNG SIÊU THỊ NỆM HÀNG ĐẦU VIỆT NAM TỔNG ...
+url = https://m.facebook.com/media/set/?vanity=vuanem.vn&set=a.693142637496508
 
 [www.instagram.com]
 match = -50.0%%
@@ -179,7 +179,7 @@ url = https://www.sec.gov/Archives/edgar/data/1606268/000119312514253996/0001193
 [www.pge.com]
 match = 0.0%%
 title = 
-url = https://www.pge.com/en/account/billing-and-assistance/understand-your-bill/net-energy-metering-bill.html
+url = https://www.pge.com/assets/pge/docs/account/billing-and-assistance/nem-bill-explainer.pdf
 
 [anta.com.vn]
 match = 0.0%%
