--- a/images/tui-nem-korea-tuan-anh-16/config.ini
+++ b/images/tui-nem-korea-tuan-anh-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-16.html
 lastopen = 2024-06-17 10:42:58
 
 [search]
-lastsearch = 2024-08-04 22:38:36
+lastsearch = 2024-08-05 01:47:29
 
 [tuananh.vn]
 match = 22.2%%
@@ -14,7 +14,7 @@ url = https://tuananh.vn/dem-korea-gam-plus-p223.html
 [demxanh.com]
 match = -28.0%%
 title = Đệm bông ép Tuấn Anh Korea gấm Plus chính hãng
-url = https://demxanh.com/dem-bong-ep-tuan-anh-korea-gam-plus.html?srsltid=AfmBOopgLKwIBRSIhlD4WkLrWGkCjTe8FvttSxWP24TCrMdKxDa8PjXX
+url = https://demxanh.com/dem-bong-ep-tuan-anh-korea-gam-plus.html
 
 [shopee.vn]
 match = -40.0%%
@@ -74,7 +74,7 @@ url = https://www.facebook.com/photo.php?fbid=663632295792539&id=100064373242328
 [demviethome.vn]
 match = -40.0%%
 title = Đệm bông ép Tuấn Anh 2 Mảnh Korea giá rẻ hà nội. ...
-url = https://demviethome.vn/dem-bong-ep-tuan-anh-2-manh-korea/?srsltid=AfmBOort4nitxyL3gWzkHFRuKoS6GOkZ7tgpJ2q5DCai83lP0vpi_hRI
+url = https://demviethome.vn/dem-bong-ep-tuan-anh-2-manh-korea/
 
 [m.facebook.com]
 match = -76.0%%
