--- a/images/vo-goi-ke-mau/config.ini
+++ b/images/vo-goi-ke-mau/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ke-mau.html
 lastopen = 2024-06-10 01:36:08
 
 [search]
-lastsearch = 2024-08-04 23:59:26
+lastsearch = 2024-08-05 01:49:14
 
 [ninhouse.vn]
 match = -146.2%%
@@ -47,9 +47,9 @@ title = UltraSheer - Siêu mỏng, vớ gối, màu da, kín ngón
 url = https://shopykhoa.com/ultrasheer-sieu-mong-vo-goi-mau-da-kin-ngon-sp101.htm
 
 [tiki.vn]
-match = -169.2%%
-title = Mua VỎ GỐI XỊN HÀNG CAO CẤP (màu kẻ ngẫu nhiên)
-url = https://tiki.vn/vo-goi-xin-hang-cao-cap-mau-ke-ngau-nhien-p134296044.html?spid=134296046
+match = -253.8%%
+title = Ga Gối Cotton Tici Kẻ Mẫu Mới Nhất (01 Ga, 02 Vỏ Gối Nằm)
+url = https://tiki.vn/ga-goi-cotton-tici-ke-mau-moi-nhat-01-ga-02-vo-goi-nam-nhap-khau-khong-bai-xu-khong-phai-mau-p140019661.html
 
 [gonbedding.vn]
 match = -15.4%%
