CI images update

--- a/images/chieu-dieu-hoa-cao-su-120x190/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-120x190/config.ini
@@ -9,7 +9,7 @@ lastsearch = 2024-08-05 01:42:14
 [demxanh.com]
 match = 34.5%%
 title = Chiếu điều hòa cao su non Tencel xanh nhạt
-url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-tencel-xanh-nhat.html
+url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-tencel-xanh-nhat.html?srsltid=AfmBOorlftVJ1zBODLdtrA1VpdA8xIgN3v1D0QILvp1vLDesVsW8K4Jf
 
 [entershopping.vn]
 match = 3.4%%
@@ -34,7 +34,7 @@ url = https://changagoidemdep.vn/chieu-dieu-hoa-cao-su-non-tencel-xanh-nhat.html
 [thegioidemonline.com]
 match = 34.5%%
 title = Chiếu điều hòa cao su non Tencel Xanh nhạt
-url = https://thegioidemonline.com/chieu-dieu-hoa-cao-su-non-tencel-xanh-nhat.html
+url = https://thegioidemonline.com/chieu-dieu-hoa-cao-su-non-tencel-xanh-nhat.html?srsltid=AfmBOopk5jK94kmE3G6cG78ci8rIxb6EZqbo3UQ5A61PeO8BxPdtNHYt
 
 [khodem.vn]
 match = 55.2%%
