--- a/images/man-in-hoa-dep-18/config.ini
+++ b/images/man-in-hoa-dep-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-18.html
 lastopen = 2024-06-10 01:12:42
 
 [search]
-lastsearch = 2024-08-05 00:23:23
+lastsearch = 2024-08-05 01:49:18
 
 [idfpr.illinois.gov]
 match = -170.6%%
@@ -12,14 +12,14 @@ title = Rights and Responsibilities of Association Board Members
 url = https://idfpr.illinois.gov/content/dam/soi/en/web/idfpr/ccico/pdfs/rights-and-responsibilities-of-association-board-members.pdf
 
 [www.reddit.com]
-match = -35.3%%
-title = Can HOA come onto my property?
-url = https://www.reddit.com/r/HOA/comments/xqmjl8/can_hoa_come_onto_my_property/
+match = -64.7%%
+title = How I gutted my HOA : r/pettyrevenge
+url = https://www.reddit.com/r/pettyrevenge/comments/10fgrkx/how_i_gutted_my_hoa/
 
 [www.quora.com]
-match = -194.1%%
-title = If you live in a neighborhood with a HOA can they keep out ...
-url = https://www.quora.com/If-you-live-in-a-neighborhood-with-a-HOA-can-they-keep-out-a-resident-if-they-are-not-listed-on-the-deed
+match = -200.0%%
+title = If I buy a house, can an HOA really tell me that my friend ...
+url = https://www.quora.com/If-I-buy-a-house-can-an-HOA-really-tell-me-that-my-friend-can-t-live-with-me-because-we-re-not-blood-related
 
 [lauragoodsonart.com]
 match = 47.1%%
@@ -560,4 +560,9 @@ url = https://ilhoalaw.com/condo-unit-owners-rights-and-responsibilities-handboo
 match = -170.6%%
 title = Virginia HOA Laws (2024): State Rules & Regulations ...
 url = https://ipropertymanagement.com/laws/virginia-hoa-rules-regulations
+
+[casetext.com]
+match = -141.2%%
+title = H.O.P.E., Inc. v. Lake Greenfield Homeowners Ass'n
+url = https://casetext.com/case/hope-inc-v-lake-greenfield-homeowners-assn-1
 
