--- a/images/ruot-nem-korea-9f-18/config.ini
+++ b/images/ruot-nem-korea-9f-18/config.ini
@@ -42,9 +42,9 @@ title = Cryptocurrency Rankings
 url = https://cryptoslate.com/coins/
 
 [30rates.com]
-match = -125.0%%
-title = USD to PHP forecast for tomorrow, this week and month.
-url = https://30rates.com/usd-to-php-forecast-today-dollar-to-philippines-peso
+match = -120.0%%
+title = USD to MXN forecast for tomorrow, this week and month.
+url = https://30rates.com/usd-to-mxn-today-forecast-dollar-to-mexican-peso
 
 [www.akc.org]
 match = -45.0%%
