--- a/images/tham-giuong-loai-1-14/config.ini
+++ b/images/tham-giuong-loai-1-14/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tham-giuong-loai-1-14.html
 lastopen = 2024-06-07 00:36:45
 
 [search]
-lastsearch = 2024-08-04 23:48:26
+lastsearch = 2024-08-05 01:52:28
 
 [bilystore.vn]
-match = -81.0%%
-title = Thảm phòng ngủ NA14 - Bilystore thảm trải sàn cao cấp
-url = https://bilystore.vn/tham-phong-ngu-na14/
+match = -95.2%%
+title = Thảm trải sàn phòng ngủ - Bilystore thảm trải sàn cao cấp
+url = https://bilystore.vn/tham-trai-san-phong-ngu/?srsltid=AfmBOopSDTDmDXJ3JnO5bmRmPE6-bl9ZVD-iYRqT0mNjHSydFybO2WQO
 
 [shopee.vn]
-match = -33.3%%
-title = Thảm lông cừu trải giường, thảm nỉ nhung ...
-url = https://shopee.vn/Thảm-lông-cừu-trải-giường-thảm-nỉ-nhung-trải-giường-thảm-nhung-đa-năng-thảm-trải-giường-3-lớp-loại-1-i.267488477.15016298625
+match = -114.3%%
+title = Thảm lông cừu trải giường, thảm nỉ nhung trải giường kích ...
+url = https://shopee.vn/Thảm-lông-cừu-trải-giường-thảm-nỉ-nhung-trải-giường-kích-thước-1m2x1m9-hàng-loại-1-i.267488477.19054543830
 
 [tiki.vn]
 match = -38.1%%
