CI images update

--- a/images/man-tu-bung-18/config.ini
+++ b/images/man-tu-bung-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-18.html
 lastopen = 2024-06-10 00:37:41
 
 [search]
-lastsearch = 2024-08-05 01:44:45
+lastsearch = 2024-08-05 02:14:20
 
 [shopee.vn]
 match = -171.4%%
@@ -32,9 +32,9 @@ title = Mùng Chụp Tự Bung Người Lớn chống muỗi BẢO BẢO
 url = https://www.mantubung.com/mung-chup-tu-bung.html
 
 [www.lazada.vn]
-match = -164.3%%
-title = Màn chụp tự bung đỉnh vuông Cao Cấp. Mùng gấp ...
-url = https://www.lazada.vn/products/man-chup-tu-bung-dinh-vuong-cao-cap-mung-gap-dinh-vuong-co-chan-vien-gia-tan-xuong-bh-18-thang-i1643502299.html
+match = -242.9%%
+title = màn tự bung hàng cao cấp, nhiều kích thước, gấp gọn tiện ...
+url = https://www.lazada.vn/products/man-chup-tu-bung-dinh-vuong-gia-xuong-hang-viet-nam-100-bao-hanh-18-thang-man-tu-bung-hang-cao-cap-nhieu-kich-thuoc-gap-gon-tien-dung-chong-muoi-hieu-qua-i1531214550.html?srsltid=AfmBOooOiCHn4DzMPCUWnHCXuqzg68vyKHSRww3g8d-YFlUdCv_asBtR
 
 [www.mungbaobao.com]
 match = -214.3%%
