--- a/images/bo-chan-ga-goi-mau-re-16/config.ini
+++ b/images/bo-chan-ga-goi-mau-re-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-mau-re-16.html
 lastopen = 2024-06-09 23:45:13
 
 [search]
-lastsearch = 2024-08-04 21:35:20
+lastsearch = 2024-08-05 02:14:39
 
 [changagoidemsonghong.com]
 match = 4.2%%
@@ -82,9 +82,9 @@ title = {1}Bộ ga thun 4 món 16 màu drap giường thun lạnh Hàn ...
 url = https://shopee.vn/-1-Bộ-ga-thun-4-món-16-màu-drap-giường-thun-lạnh-Hàn-Quốc-i.11438690.167422602
 
 [demxanh.com]
-match = -8.3%%
-title = Bộ chăn ga gối lụa tơ tằm cao cấp King luxury 16
-url = https://demxanh.com/bo-chan-ga-goi-lua-to-tam-cao-cap-king-luxury-16.html
+match = -25.0%%
+title = Chăn Ga Gối Đệm chính hãng giá rẻ nhất Hà Nội
+url = https://demxanh.com/chan-ga-goi-dem.html?srsltid=AfmBOoqD8b7GuqsmXZPbXRhE21_e_UhoMS1w648XRfNx-NHRqGHfymYz
 
 [changagoibenlinda.com]
 match = -12.5%%
