--- a/images/bo-chan-ga-goi-uc-cotton-16/config.ini
+++ b/images/bo-chan-ga-goi-uc-cotton-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-uc-cotton-16.html
 lastopen = 2024-06-07 00:26:06
 
 [search]
-lastsearch = 2024-08-04 21:35:42
+lastsearch = 2024-08-05 02:13:40
 
 [changagoidemsonghong.com]
-match = 7.4%%
-title = Bộ chăn ga gối Sông Hồng dòng Basic mã mầu BC16
-url = https://changagoidemsonghong.com/chan-ga-goi-bc16
+match = -40.7%%
+title = Chăn ga gối đệm cưới thiết kế sản xuất by Sông Hồng ...
+url = https://changagoidemsonghong.com/chan-ga-goi-dem-cuoi
 
 [demhong.vn]
 match = 11.1%%
@@ -63,8 +63,8 @@ url = https://songhonghanoi.vn/bo-chan-ga-goi-song-hong-tencel-s1601-ga-chun.htm
 
 [alnena.vn]
 match = 14.8%%
-title = Bộ Chăn Ga Gối Mỏng 100%% COTTON ALNENA Mã A1441
-url = https://alnena.vn/products/bo-chan-ga-goi-mong-100-cotton-alnena-ma-a1441
+title = Bộ Chăn Ga Gối Mỏng 100%% COTTON ALNENA Mã A1443
+url = https://alnena.vn/products/bo-chan-ga-goi-mong-100-cotton-alnena-ma-a1443
 
 [bedding.vn]
 match = 11.1%%
@@ -72,9 +72,9 @@ title = Chăn ga gối Sông Hồng Urban mã mầu UC16
 url = https://bedding.vn/chan-ga-goi-song-hong-uc16/
 
 [shopee.vn]
-match = -18.5%%
-title = Bộ Chăn Ga Gối Cotton Bèo Nơ Hàn Quốc Cao Cấp Mẫu ...
-url = https://shopee.vn/Bộ-Chăn-Ga-Gối-Cotton-Bèo-Nơ-Hàn-Quốc-Cao-Cấp-Mẫu-Siêu-Xinh-i.222675465.7371664284
+match = -22.2%%
+title = Bộ Chăn Ga Gối Cotton Sateen Mịn Decor Bo Chun 10cm ...
+url = https://shopee.vn/Bộ-Chăn-Ga-Gối-Cotton-Sateen-Mịn-Decor-Bo-Chun-10cm-Đến-30cm-Bộ-Lụa-Thái-Size-1m6-1m8-Kèm-Chăn-Chần-(Video-ảnh-thật)-i.214153944.18282347783
 
 [lynconcept.com]
 match = -25.9%%
@@ -152,9 +152,9 @@ title = Chăn ga gối Sông Hồng Urban mã mầu UC16 - Đệm Thiên Kim
 url = https://demthienkim.com/chan-ga-goi-song-hong-uc16/
 
 [elmichsleep.vn]
-match = -25.9%%
-title = Mua Chăn Ga Gối Cao Cấp - Đạt chuẩn chất lượng Châu Âu
-url = https://elmichsleep.vn/chan-ga-goi
+match = -18.5%%
+title = Bộ chăn ga 100%% Cotton Ranforce - Elmich Dr.Sleep
+url = https://elmichsleep.vn/bo-chan-ga-100-cotton-ranforce
 
 [khodemgiagoc.com]
 match = -37.0%%
