--- a/images/chan-5-kg-kq-khong-song/config.ini
+++ b/images/chan-5-kg-kq-khong-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-khong-song.html
 lastopen = 2024-06-09 23:49:54
 
 [search]
-lastsearch = 2024-08-05 00:38:38
+lastsearch = 2024-08-05 02:22:58
 
 [demxanh.com]
 match = 26.1%%
@@ -215,4 +215,9 @@ url = https://www.facebook.com/groups/500424327529776/
 match = 13.0%%
 title = soi kèo hà lan vs senegal
 url = https://amscau.icar.gov.in/ios/soi-keo-ha-lan-vs-senegal.aspx
+
+[financialservices.gov.in]
+match = 4.3%%
+title = Lokesh deopura [ox6edb]
+url = https://financialservices.gov.in/beta/digital_archive/akam-xml-new/screen04.html?video_id=video/Marathi/7&YT=https://xn----8sbwhcgscfiy8e.xn--p1ai/8475936wwwecopresentsrua5fe43y
 
