--- a/images/chieu-lac-gam-14/config.ini
+++ b/images/chieu-lac-gam-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-14.html
 lastopen = 2024-06-09 23:47:29
 
 [search]
-lastsearch = 2024-08-05 01:35:56
+lastsearch = 2024-08-05 02:17:48
 
 [www.diepxuan.com]
 match = 56.2%%
@@ -514,11 +514,11 @@ url = https://caselaw.vn/van-ban-phap-luat/255485-tieu-chuan-viet-nam-tcvn-7572-
 [www.pnj.com.vn]
 match = -100.0%%
 title = Lắc Tay, Vòng Tay Vàng PNJ| pnj.com.vn
-url = https://www.pnj.com.vn/lac-vong-tay/lac-vong-tay-vang/
+url = https://www.pnj.com.vn/lac-vong-tay/lac-vong-tay-vang/?srsltid=AfmBOorZEZfkv9LFRis7Dz_zumYcW9zWFQtTRQBiiRCjQDXizGVfNxVy
 
 [primagold.com.vn]
 match = -218.8%%
-title = Giá vàng 9999 hôm nay tại 64 tỉnh 4/8/2024 | Bảng giá vàng
+title = Giá vàng 9999 hôm nay tại 64 tỉnh 5/8/2024 | Bảng giá vàng
 url = https://primagold.com.vn/
 
 [kontumcity.kontum.gov.vn]
