--- a/images/chieu-nhua-thai-binh-gt-180x200/config.ini
+++ b/images/chieu-nhua-thai-binh-gt-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-gt-180x200.html
 lastopen = 2024-08-01 05:18:22
 
 [search]
-lastsearch = 2024-08-05 01:17:08
+lastsearch = 2024-08-05 02:16:02
 
 [shopee.vn]
 match = 12.9%%
@@ -22,9 +22,9 @@ title = Chiếu nhựa Hà Nội GT 180x200 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-nhua-ha-noi-gt-180x200.html
 
 [m.facebook.com]
-match = 12.9%%
-title = Chung cư nhà xã hội - Âu Cơ - Hoà Khánh
-url = https://m.facebook.com/groups/661270174478229/posts/1536393513632553/
+match = 9.7%%
+title = Hội Sales Quảng Bình 73 | Chào cả nhà
+url = https://m.facebook.com/groups/251202215303340/posts/858519194571636/
 
 [trangvangvietnam.com]
 match = 20.0%%
