--- a/images/chieu-truc-que-lam-loai-1-16-20/config.ini
+++ b/images/chieu-truc-que-lam-loai-1-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-1-16-20.html
 lastopen = 2024-06-09 23:23:20
 
 [search]
-lastsearch = 2024-08-05 01:40:06
+lastsearch = 2024-08-05 02:24:45
 
 [thegioidemviet.vn]
 match = 38.7%%
@@ -12,14 +12,14 @@ title = Bảng Giá Chiếu Trúc Quế Lâm [Chính hãng
 url = https://thegioidemviet.vn/chieu-truc-que-lam/
 
 [chieutrelanlan.com]
-match = -6.5%%
-title = Chiếu trúc mắt nhỏ không viền màu đen 160x190cm (1m6)
-url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-khong-vien-mau-den-160x190cm-27.html
+match = 32.3%%
+title = Chiếu trúc Việt nam - Thương hiệu Lan Lan
+url = https://chieutrelanlan.com/chieu-truc-p17.html?size=16
 
 [shopee.vn]
-match = 48.4%%
-title = Chiếu trúc Quế Lâm - hàng chuẩn loại 1
-url = https://shopee.vn/Chiếu-trúc-Quế-Lâm-hàng-chuẩn-loại-1-i.20551076.970075626
+match = 6.5%%
+title = chiếu trúc hạt giá tốt Tháng 8, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=chiếu trúc hạt
 
 [tiki.vn]
 match = -19.4%%
@@ -27,9 +27,9 @@ title = Chiếu trúc hạt hàng chính hãng, giao nhanh - Tháng 7, 2024
 url = https://tiki.vn/search?q=chiếu trúc hạt
 
 [demxanh.com]
-match = -9.7%%
-title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html
+match = -3.2%%
+title = Chuyên cung cấp chiếu trúc hạt các hãng hàng ...
+url = https://demxanh.com/chieu-truc-hat.html
 
 [www.sendo.vn]
 match = -3.2%%
@@ -62,9 +62,9 @@ title = MUA CHIẾU TRÚC CHẤT LƯỢNG QUẬN 3
 url = https://chieutrucsaigon.com/tin-tuc/tin-trong-nuoc/mua-chieu-truc-chat-luong-quan-3-54.html
 
 [www.youtube.com]
-match = -12.9%%
-title = Chiếu trúc Quế Lâm mắt ngọc hạt vàng bóng đẹp loại 1 - 0965 ...
-url = https://www.youtube.com/watch?v=8i3SOv4E4eo
+match = -38.7%%
+title = Tiên Nhân Chỉ Lộ 2024 | KTQG Đặng Hữu Trang vs Quản ...
+url = https://www.youtube.com/watch?v=10C5ujNsAAg
 
 [www.google.com]
 match = -12.9%%
