--- a/images/ruot-goi-ke-korea-45x65/config.ini
+++ b/images/ruot-goi-ke-korea-45x65/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-korea-45x65.html
 lastopen = 2024-08-02 00:29:53
 
 [search]
-lastsearch = 2024-08-05 00:48:03
+lastsearch = 2024-08-05 02:15:00
 
 [demxanh.com]
 match = -47.8%%
@@ -43,8 +43,8 @@ url = https://thegioidemonline.com/ruot-goi-bong.html
 
 [www.diepxuan.com]
 match = 21.7%%
-title = Điệp Xuân Ruột gối kê Everhome M 45x65
-url = https://www.diepxuan.com/ruot-goi-ke-everhome-m-45x65.html
+title = Ruột gối kê Warmdream 45x65 - Điệp Xuân
+url = https://www.diepxuan.com/ruot-goi-ke-warmdream-45x65.html
 
 [tiki.vn]
 match = -60.9%%
