--- a/images/tham-giuong-bo-de-15/config.ini
+++ b/images/tham-giuong-bo-de-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-15.html
 lastopen = 2024-06-07 00:36:08
 
 [search]
-lastsearch = 2024-08-05 01:28:03
+lastsearch = 2024-08-05 02:12:40
 
 [www.diepxuan.com]
 match = 10.0%%
@@ -47,9 +47,9 @@ title = Bộ giường tủ cổ điển nhập khẩu GR B15
 url = https://greenfurni.vn/bo-giuong-tu-co-dien-nhap-khau-gr-b15/
 
 [noithattana.vn]
-match = -115.0%%
-title = Bộ giường ngủ hiện đại nhập khẩu - Mẫu giường tủ gỗ đẹp ...
-url = https://noithattana.vn/giuong-tu-hien-dai/
+match = -140.0%%
+title = Bộ giường ngủ tân cổ điển giá rẻ đẹp, cao cấp nhập khẩu ...
+url = https://noithattana.vn/giuong-tu-tan-co-dien/
 
 [tiki.vn]
 match = -50.0%%
@@ -72,19 +72,19 @@ title = GIƯỜNG NGỦ BỌC DA CAO CẤP HIỆN ĐẠI - LB15
 url = https://nemphuoclong.vn/giuong-ngu-boc-da-cao-cap-hien-dai-lb15
 
 [noithatcaco.vn]
-match = -135.0%%
-title = 65 Mẫu giường ngủ trẻ em bé trai bé gái - Thiết kế siêu xinh
-url = https://noithatcaco.vn/collections/giuong-ngu-tre-em
+match = -115.0%%
+title = Giường ngủ hiện đại đẹp giá rẻ 100+ mẫu mới 09/2024
+url = https://noithatcaco.vn/collections/giuong-ngu
 
 [www.quiphuc.com]
-match = 25.0%%
-title = Giường - Ghế du lịch
-url = https://www.quiphuc.com/collections/giuong-ghe-du-lich
+match = 0.0%%
+title = Giường - Sản phẩm mùa hè
+url = https://www.quiphuc.com/collections/giuong-san-pham-mua-he
 
 [sumika.vn]
-match = -140.0%%
-title = Giường xếp gọn, ghế xếp là hai sản phẩm tiện ích của ...
-url = https://sumika.vn/ghe-xep-giuong-xep-839
+match = -65.0%%
+title = Giường xếp gọn - Thiết bị gia dụng SUMIKA
+url = https://sumika.vn/giuong-xep-gon-846
 
 [noithatanhuy.com.vn]
 match = -5.0%%
@@ -99,7 +99,7 @@ url = https://flexhouse.vn/tham-trai-san-phong-ngu
 [everonvn.com.vn]
 match = -75.0%%
 title = Kích thước đệm giường đơn tiêu chuẩn là bao nhiêu?
-url = https://everonvn.com.vn/tin-tuc/196/kich-thuoc-giuong-dem-tieu-chuan-va-chan-ga-goi-la-bao-nhieu-?srsltid=AfmBOoq0tO9OYYyYFeBa55T_wrNRxe_-3G-BZWv9nXYlmPUDtHf73zrr
+url = https://everonvn.com.vn/tin-tuc/196/kich-thuoc-giuong-dem-tieu-chuan-va-chan-ga-goi-la-bao-nhieu-
 
 [noithatgiakhanh.net]
 match = -105.0%%
