--- a/images/chan-hoi-coco/config.ini
+++ b/images/chan-hoi-coco/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chan-hoi-coco.html
 lastopen = 2024-06-09 23:18:33
 
 [search]
-lastsearch = 2024-08-04 23:49:08
+lastsearch = 2024-08-05 02:59:59
 
 [hk.linkedin.com]
-match = -23.1%%
-title = Coco Chan - Wellesley
-url = https://hk.linkedin.com/in/coco-chan-734351222
+match = -123.1%%
+title = Chan cocoo - Freelance (Self employed)
+url = https://hk.linkedin.com/in/chan-cocoo-2aa4362b1
 
 [www.instagram.com]
-match = -238.5%%
-title = Coco Chan (@cocopops072) • Instagram photos and videos
-url = https://www.instagram.com/cocopops072/?hl=en
+match = -230.8%%
+title = Hoi Chan (@hoichandraws) • Instagram photos and videos
+url = https://www.instagram.com/hoichandraws/?hl=en
 
 [www.solunafineart.com]
 match = -22.2%%
@@ -117,9 +117,9 @@ title = Athena Chan
 url = https://www.scmp.com/author/athena-chan
 
 [www.facebook.com]
-match = -384.6%%
-title = 2018年度J3 - J12全港兒童繪畫比賽- J5組(2012 ...
-url = https://www.facebook.com/photo.php?fbid=1963553563689998&id=966751760036855&set=a.1019627311415966&locale=zh_HK
+match = -15.4%%
+title = Coco Alexandra Chan
+url = https://www.facebook.com/CocoAlexandraChan/
 
 [tel.directory.gov.hk]
 match = -84.6%%
