--- a/images/chieu-dieu-hoa-khong-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-14.html
 lastopen = 2024-06-09 22:26:37
 
 [search]
-lastsearch = 2024-08-05 02:15:41
+lastsearch = 2024-08-05 02:49:12
 
 [shopee.vn]
 match = -33.3%%
@@ -22,9 +22,9 @@ title = Chiếu điều hòa có mát không? Review 10 ...
 url = https://tiki.vn/blog/chieu-dieu-hoa/
 
 [foreverbedding.net]
-match = 0.0%%
-title = Nằm Chiếu Điều Hòa Có Mát Không? - Forever Bedding
-url = https://foreverbedding.net/nam-chieu-dieu-hoa-co-mat-khong
+match = -59.3%%
+title = Những Thông Tin Cần Biết Khi Mua Chiếu Điều Hoà Cao Su ...
+url = https://foreverbedding.net/chieu-dieu-hoa-cao-su-non-la-gi
 
 [kyoryo.vn]
 match = -40.7%%
@@ -72,9 +72,9 @@ title = Tìm Hiểu Chiếu Điều Hòa giá Bao Nhiêu chất liệu thế nà
 url = https://3dthinking.vn/tim-hieu-chieu-dieu-hoa-gia-bao-nhieu-chat-lieu-the-nao/
 
 [www.youtube.com]
-match = -55.6%%
-title = Thực hư về khả năng làm mát của chiếu điều hòa | An toàn ...
-url = https://www.youtube.com/watch?v=ccaTWASdw7I
+match = -44.4%%
+title = SỰ THẬT| Chiếu điều hòa tencel - Chiếu cao su non có mát ...
+url = https://www.youtube.com/watch?v=OShfCNiOmA8
 
 [lybalansieucute.com]
 match = 33.3%%
