--- a/images/chieu-lac-d2-08/config.ini
+++ b/images/chieu-lac-d2-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-08.html
 lastopen = 2024-06-20 13:15:42
 
 [search]
-lastsearch = 2024-08-05 02:28:51
+lastsearch = 2024-08-05 03:00:41
 
 [batdongsan.com.vn]
 match = -240.0%%
@@ -309,7 +309,7 @@ url = https://diaoc24gio.com/du-an/quan-2-khu-dan-cu-d2-eight-capital-land
 [concung.com]
 match = -220.0%%
 title = Ba lô chống lạc bé gái Princess DHF19017-D2 (Hồng) giá tốt
-url = https://concung.com/thoi-trang-tre-em/ba-lo-chong-lac-be-gai-princess-dhf19017-d2-hong-61528.html?srsltid=AfmBOoqJrf8USeI4VCfU9upNMwYQdSnnA_gK7z3FE0OQ2W891AihVoDB
+url = https://concung.com/thoi-trang-tre-em/ba-lo-chong-lac-be-gai-princess-dhf19017-d2-hong-61528.html
 
 [tuyensinh247.com]
 match = -220.0%%
