--- a/images/chieu-lac-gam-14/config.ini
+++ b/images/chieu-lac-gam-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-14.html
 lastopen = 2024-06-09 23:47:29
 
 [search]
-lastsearch = 2024-08-05 02:17:48
+lastsearch = 2024-08-05 02:50:56
 
 [www.diepxuan.com]
 match = 56.2%%
@@ -27,9 +27,9 @@ title = Chiếu Lác: Nơi bán giá rẻ, uy tín, chất lượng nhất
 url = https://websosanh.vn/s/chiếu+lác.htm
 
 [www.youtube.com]
-match = -168.8%%
-title = VÌ SAO REAL CÓ THỂ CHIÊU MỘ CẦU THỦ MIỄN PHÍ ĐỈNH ...
-url = https://www.youtube.com/watch?v=Uh7dDbqSuuQ
+match = -20.0%%
+title = KÊNH VTC14
+url = https://www.youtube.com/channel/UCinkijG72G87sn-mtaFJTbA
 
 [tuyensinh247.com]
 match = -218.8%%
@@ -514,7 +514,7 @@ url = https://caselaw.vn/van-ban-phap-luat/255485-tieu-chuan-viet-nam-tcvn-7572-
 [www.pnj.com.vn]
 match = -100.0%%
 title = Lắc Tay, Vòng Tay Vàng PNJ| pnj.com.vn
-url = https://www.pnj.com.vn/lac-vong-tay/lac-vong-tay-vang/?srsltid=AfmBOorZEZfkv9LFRis7Dz_zumYcW9zWFQtTRQBiiRCjQDXizGVfNxVy
+url = https://www.pnj.com.vn/lac-vong-tay/lac-vong-tay-vang/
 
 [primagold.com.vn]
 match = -218.8%%
