--- a/images/chieu-nhua-ha-noi-du-lich-16/config.ini
+++ b/images/chieu-nhua-ha-noi-du-lich-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-16.html
 lastopen = 2024-06-09 23:14:36
 
 [search]
-lastsearch = 2024-08-05 01:46:07
+lastsearch = 2024-08-05 02:46:45
 
 [www.diepxuan.com]
 match = 35.7%%
@@ -22,9 +22,9 @@ title = Chiếu nhựa việt nam 2mx4m hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=chiếu nhựa việt nam 2mx4m
 
 [www.yellowpages.vn]
-match = -5.3%%
-title = sản xuất chiếu nhựa
-url = https://www.yellowpages.vn/tgcls/40490435/sản-xuất-chiếu-nhựa.html?j=3
+match = 0.0%%
+title = danh sách Chiếu Nhựa
+url = https://www.yellowpages.vn/tgcls/10490435/Chiếu-Nhựa.html?j=0
 
 [www.dienmayxanh.com]
 match = -35.7%%
@@ -325,4 +325,9 @@ url = https://thuongthanh.longbien.hanoi.gov.vn/documents/30306/16280831/2023051
 match = -75.0%%
 title = Nhiều mẫu ô tô giảm giá trong tháng 8 | Bản tin Tàu và Xe | 04 ...
 url = https://hanoionline.vn/video/nhieu-mau-o-to-giam-gia-trong-thang-8-ban-tin-tau-va-xe-04-08-2024-256290.htm
+
+[vietravel.com]
+match = 0.0%%
+title = Hà Nội một chiều xuân
+url = http://vietravel.com/vn/non-nuoc-viet-nam/ha-noi-mot-chieu-xuan-v3370.aspx
 
