--- a/images/ruot-nem-korea-9f-16-20/config.ini
+++ b/images/ruot-nem-korea-9f-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-16-20.html
 lastopen = 2024-06-10 00:40:18
 
 [search]
-lastsearch = 2024-08-05 01:20:59
+lastsearch = 2024-08-05 02:54:44
 
 [www.reddit.com]
 match = -82.6%%
@@ -282,9 +282,9 @@ title = Introduction
 url = https://www.degruyter.com/document/doi/10.1515/9780824887964-013/pdf?licenseType=restricted
 
 [en.yna.co.kr]
-match = -117.4%%
-title = (2nd LD) PM: THAAD deployment 'difficult yet inevitable ...
-url = https://en.yna.co.kr/view/AEN20170907001852315
+match = -87.0%%
+title = PM calls off press meeting amid clash over THAAD ...
+url = https://en.yna.co.kr/view/AEN20170907001800315
 
 [lol.fandom.com]
 match = 0.0%%
@@ -575,4 +575,9 @@ url = https://treaties.un.org/doc/Publication/UNTS/Volume 1049/v1049.pdf
 match = -78.3%%
 title = NEM KRW (XEM-KRW) latest stock news and headlines
 url = https://sg.finance.yahoo.com/quote/XEM-KRW/news/
+
+[logangreenhouse.com]
+match = -121.7%%
+title = Item Qty. Price Category Acer (Amur Maple Shrub) 0 $159.95 ...
+url = https://logangreenhouse.com/wp-content/uploads/2023/08/Inventory-8-25.pdf
 
