--- a/images/ga-phu-es1804-160x200/config.ini
+++ b/images/ga-phu-es1804-160x200/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/ga-phu-es1804-160x200.html
 lastopen = 2024-07-01 16:45:20
 
 [search]
-lastsearch = 2024-08-05 02:51:17
+lastsearch = 2024-08-05 03:26:30
 
 [everonvn.com.vn]
-match = -114.3%%
-title = Bảng giá bán bộ chăn ga gối Everon Es1807 - Serenity ...
-url = https://everonvn.com.vn/everon/611/bo-everon-es1807
+match = -133.3%%
+title = Bảng giá bán bộ chăn ga gối Everon Es1807 - Serenity màu ...
+url = https://everonvn.com.vn/everon/611/bo-everon-es1807?srsltid=AfmBOoqhK3ilvbpsgUfmQo7mnD1tpl2cW2dKCJk1eqp4wCEZx-Us2oRB
 
 [www.everonqb.com]
-match = -9.5%%
-title = Everon Quảng Bình Ga phủ EPC19056 160x200
-url = https://www.everonqb.com/ga-phu-epc19056-160x200.html
+match = -38.1%%
+title = Everon Quảng Bình Bộ ga phủ EPCARLESS 160x200
+url = https://www.everonqb.com/bo-ga-phu-epcarless-160x200.html
 
 [www.diepxuan.com]
 match = -19.0%%
@@ -22,9 +22,9 @@ title = Chiếu cây HT 150x190 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-cay-ht-150x190.html
 
 [muathongminh.vn]
-match = -90.5%%
-title = bộ chăn ga gối đệm cưới 5 món - Mua Thông Minh
-url = https://muathongminh.vn/bo-chan-ga-goi-sattin-cao-cap-bo-chan-ga-goi-dem-cuoi-5-mon-p.1__5571826479__326869167
+match = -123.8%%
+title = Lịch sử giá Bộ ga phủ everon esm-21012 - đang giảm 150.000 ...
+url = https://muathongminh.vn/bo-ga-phu-esm-21012-01-ga-phu-02-vo-goi-45cmx65cm-01-vo-chan-dong-2mx2m2-p.1__7745632717__40934475
 
 [beecost.vn]
 match = -61.9%%
