--- a/images/nem-di-a-mon-9f-16-re/config.ini
+++ b/images/nem-di-a-mon-9f-16-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-di-a-mon-9f-16-re.html
 lastopen = 2024-06-10 00:47:22
 
 [search]
-lastsearch = 2024-08-05 02:55:03
+lastsearch = 2024-08-05 03:29:54
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -52,9 +52,9 @@ title = Balancing Supply and Demand …. in the fast approaching ' ...
 url = https://wattclarity.com.au/articles/2020/05/nem20-balancingsupplydemand-rawofftarget/
 
 [books.google.com]
-match = -38.1%%
-title = A Dictionary of Music and Musicians
-url = https://books.google.com/books?id=RgBKAQAAMAAJ&pg=PA308&lpg=PA308&dq=nem+di+a+mon+9f+16+re&source=bl&ots=9D8EmGI-ob&sig=ACfU3U0nJSOOtZo-2NqUcvYxiGZJxwnVQA&hl=en&sa=X&ved=2ahUKEwjkgOv9jtyHAxX1NzQIHeioDVMQ6AF6BAhFEAM
+match = -123.8%%
+title = A Critical Pronouncing Dictionary, and Expositor of the ...
+url = https://books.google.com/books?id=mjRAAAAAYAAJ&pg=RA3-PA80&lpg=RA3-PA80&dq=nem+di+a+mon+9f+16+re&source=bl&ots=BLKCw3zqwk&sig=ACfU3U3yNO3C2zw5-RntoXTOTfT-ZtCBVg&hl=en&sa=X&ved=2ahUKEwjHlujiltyHAxWbkO4BHSwoEQ8Q6AF6BAhBEAM
 
 [www.diepxuan.com]
 match = -81.0%%
