--- a/images/tham-nhung-bali-2m-3m/config.ini
+++ b/images/tham-nhung-bali-2m-3m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-nhung-bali-2m-3m.html
 lastopen = 2024-06-09 22:34:54
 
 [search]
-lastsearch = 2024-08-04 21:46:38
+lastsearch = 2024-08-05 03:20:31
 
 [noithathomy.com]
 match = -42.9%%
@@ -12,9 +12,9 @@ title = Thảm nỉ Bali 2m x 3m TNHM02 | Hàng nhâp khẩu
 url = https://noithathomy.com/san-pham/tham-ni-bali-2m-x-3m-tnhm02/
 
 [shopee.vn]
-match = -128.6%%
-title = Thảm sàn Bali- thảm trang trí sang trọng, hoa văn , đường ...
-url = https://shopee.vn/Thảm-sàn-Bali-thảm-trang-trí-sang-trọng-hoa-văn-đường-chỉ-chắc-chắn-kt-2-3m-x-3m-(-VIDEO-KÈM-ẢNH-THẬT)-i.3551312.5349158590
+match = -81.0%%
+title = Tặng Thảm Lau Chân - 100 Mẫu Thảm 2m x 3m Thảm Nỉ ...
+url = https://shopee.vn/Tặng-Thảm-Lau-Chân-100-Mẫu-Thảm-2m-x-3m-Thảm-Nỉ-Bali-Trải-Sàn-Trải-Phòng-Khách-Phòng-Ngủ-Sang-Trọng-i.22156385.4432151796
 
 [www.lazada.vn]
 match = -104.8%%
