--- a/images/tam-trai-ks-uc-260-300/config.ini
+++ b/images/tam-trai-ks-uc-260-300/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-ks-uc-260-300.html
 lastopen = 2024-06-07 00:15:36
 
 [search]
-lastsearch = 2024-08-05 01:27:02
+lastsearch = 2024-08-05 03:32:01
 
 [www.cms.gov]
 match = 4.5%%
@@ -232,9 +232,9 @@ title = Plant Inventory No. 205
 url = https://www.ars-grin.gov/npgs/pi_books/scans/pi205.pdf
 
 [www.iowa-city.org]
-match = -45.5%%
-title = 2013 Council Minutes - City of Iowa City
-url = https://www.iowa-city.org/WebLink/DocView.aspx?id=1350737&dbid=0&repo=CityofIowaCity
+match = -59.1%%
+title = 1992-01-07 Info Packet - City of Iowa City
+url = https://www.iowa-city.org/WebLink/DocView.aspx?id=106263&dbid=0&repo=CityofIowaCity
 
 [www.cigna.com]
 match = -81.8%%
@@ -254,7 +254,7 @@ url = https://www.stb.gov/wp-content/uploads/FD-32760_K_V32.pdf
 [www.bayareaeconomy.org]
 match = -58.3%%
 title = Global Reach
-url = http://www.bayareaeconomy.org/files/pdf/GlobalReachFullReportWeb.pdf
+url = https://www.bayareaeconomy.org/files/pdf/GlobalReachFullReportWeb.pdf
 
 [www.acswasc.org]
 match = -4.5%%
@@ -267,9 +267,9 @@ title = US Marines in Vietnam An Expanding War 1966 PCN ...
 url = https://www.marines.mil/Portals/1/Publications/US Marines in Vietnam An Expanding War 1966  PCN 19000308600_6.pdf
 
 [www.fmcs.gov]
-match = -22.7%%
-title = 50c49f2d-f921-ea11-a9a3-001dd8
-url = https://www.fmcs.gov/wp-content/uploads/2022/07/June-2022-F7-Notices.xlsx
+match = -110.0%%
+title = NF1CBMA11M
+url = https://www.fmcs.gov/wp-content/uploads/2015/07/201403MAR.xls
 
 [profiles.ucsd.edu]
 match = -50.0%%
@@ -795,4 +795,24 @@ url = https://www.arnprior.ca/en/town-hall/2021-11-16-Arnprior-WFMP.pdf
 match = 0.0%%
 title = 
 url = https://www.usni.org/magazines/proceedings/1973/may/marine-corps-operations-vietnam-1969-1972
+
+[veritaglobal.net]
+match = -81.8%%
+title = ¿0ñiFQ(#; "*½ - Kurtzman Carson Consultants
+url = https://veritaglobal.net/moviegallery2007/document/0733849080327000000000002
+
+[energyplan.ny.gov]
+match = -18.2%%
+title = S i - New York State Energy Plan
+url = https://energyplan.ny.gov/The-Board/-/media/Project/EnergyPlan/files/2014stateenergyplan-documents/reliability-study.pdf
+
+[files.monterey.gov]
+match = -425.0%%
+title = 1913
+url = https://files.monterey.gov/Document Center/City Hall/City clerk/Charters/1913-Charter.pdf
+
+[financialservices.gov.in]
+match = 0.0%%
+title = Shui zhong yang [LpM2d5]
+url = https://financialservices.gov.in/beta/digital_archive/akam-xml-new/screen04.html?video_id=video/Marathi/7&YT=https://detsad147vrn.ru/6297841fyw6jcwayx4p24ny13afil-test-domenrua5fe43y
 
