--- a/images/man-re-trang-12/config.ini
+++ b/images/man-re-trang-12/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/man-re-trang-12.html
 lastopen = 2024-06-07 00:52:43
 
 [search]
-lastsearch = 2024-08-05 02:23:20
+lastsearch = 2024-08-05 03:43:58
 
 [burningman.org]
-match = 0.0%%
-title = 
+match = -60.0%%
+title = The 10 Principles of Burning Man
 url = https://burningman.org/about/10-principles/
 
 [www.usatoday.com]
@@ -604,7 +604,7 @@ url = https://www.nasa.gov/nasatv/
 [www.ray-ban.com]
 match = -180.0%%
 title = Ray-Ban® Official Sunglasses Store | Ray-Ban® US
-url = https://www.ray-ban.com/usa
+url = https://www.ray-ban.com/usa?srsltid=AfmBOoqE8DgxcQX3G05ft6SHBEvefnrVGQ6S_0Wpx1eNUhntHHse8tv0
 
 [www.8newsnow.com]
 match = -220.0%%
@@ -632,9 +632,9 @@ title = ADA.gov: The Americans with Disabilities Act
 url = https://www.ada.gov/
 
 [books.google.com]
-match = -266.7%%
-title = The Holy Bible, Containing the Old and New Testaments: Newly ...
-url = https://books.google.com/books?id=YUFbAAAAQAAJ&pg=RA3-PA6&lpg=RA3-PA6&dq=man+re+trang+12&source=bl&ots=skN6trwWP4&sig=ACfU3U05QVV8ikoeqRiw6WYSzJyUfXtpCg&hl=en&sa=X&ved=2ahUKEwiV-N6DjtSHAxVXCTQIHaDFAakQ6AF6BAgjEAM
+match = -260.0%%
+title = Department of the Army Pamphlet - Page 153 - Google Books Result
+url = https://books.google.com/books?id=wBXAEQTV0TAC&pg=PA153&lpg=PA153&dq=man+re+trang+12&source=bl&ots=luPnzKARMm&sig=ACfU3U0AO5pPYw1gd5niCnlwqjdsZY9k9A&hl=en&sa=X&ved=2ahUKEwi9poX1mdyHAxUoOjQIHe1BBSEQ6AF6BAgiEAM
 
 [satsuite.collegeboard.org]
 match = -93.3%%
@@ -1190,4 +1190,9 @@ url = https://www.thenmusa.org/
 match = -140.0%%
 title = Diabetes Research, Education, Advocacy | ADA
 url = https://diabetes.org/
+
+[annualreport2018.burningman.org]
+match = 0.0%%
+title = 
+url = https://annualreport2018.burningman.org/about-burning-man-project/10-principles/
 
