--- a/images/tham-giuong-ii-180x200/config.ini
+++ b/images/tham-giuong-ii-180x200/config.ini
@@ -12,9 +12,9 @@ title = Điệp Xuân Thảm giường nỉ 180x200
 url = https://www.diepxuan.com/tham-giuong-ni-180x200.html
 
 [demxanh.com]
-match = 0.0%%
-title = Thảm trải giường cao su non màu ghi
-url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-ghi.html
+match = -22.7%%
+title = Thảm trải giường cao su non màu xanh nhạt
+url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-xanh-nhat.html
 
 [www.lazada.vn]
 match = -68.2%%
