--- a/images/vo-goi-epm20065-45x65/config.ini
+++ b/images/vo-goi-epm20065-45x65/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-goi-epm20065-45x65.html
 lastopen = 2024-07-07 18:08:23
 
 [search]
-lastsearch = 2024-08-05 02:37:53
+lastsearch = 2024-08-05 04:24:14
 
 [www.diepxuan.com]
-match = -19.0%%
-title = Vỏ gối kê WarmDream 45x65 HQ - Điệp Xuân
-url = https://www.diepxuan.com/vo-goi-ke-warmdream-45x65-hq.html
+match = -4.8%%
+title = Điệp Xuân Vỏ gối ôm EPC19055 80x100
+url = https://www.diepxuan.com/vo-goi-om-epc19055-80x100.html
 
 [tiki.vn]
 match = -81.0%%
