--- a/images/chieu-dieu-hoa-khong-goi-re-16/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-re-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-re-16.html
 lastopen = 2024-06-09 23:43:24
 
 [search]
-lastsearch = 2024-08-05 00:50:53
+lastsearch = 2024-08-05 04:13:12
 
 [demxanh.com]
-match = 43.5%%
-title = Chiếu điều hòa Nhật Bản
-url = https://demxanh.com/chieu-dieu-hoa-nhat-ban.html
+match = -3.3%%
+title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
+url = https://demxanh.com/chieu-dieu-hoa.html?srsltid=AfmBOoqlsYp8Q4HcmtClcpBR4uO3j5oVvHveCP9XpnWuqczU165auAY7
 
 [suongtuyet.com]
 match = -13.3%%
@@ -34,7 +34,7 @@ url = https://tiki.vn/blog/chieu-dieu-hoa/
 [demviethome.vn]
 match = 26.7%%
 title = Chiếu điều hòa Latex C16 giá rẻ hà nội. ...
-url = https://demviethome.vn/chieu-dieu-hoa-latex-c16/
+url = https://demviethome.vn/chieu-dieu-hoa-latex-c16/?srsltid=AfmBOorQGHO_GOLrmx4vQYKR45Cbf3Cx8b3q4HoR5tq6WOxiCPXcY-2h
 
 [www.dienmayxanh.com]
 match = -36.7%%
@@ -69,7 +69,7 @@ url = https://thegioinem.com/nam-chieu-dieu-hoa-co-tot-cho-suc-khoe-khong.html
 [xn--nekiovitnam-y69e.vn]
 match = 3.3%%
 title = Bảng giá chiếu mây điều hòa 2024 - Nekio Việt Nam
-url = https://xn--nekiovitnam-y69e.vn/bang-gia-chieu-may-dieu-hoa-2023/
+url = https://xn--nekiovitnam-y69e.vn/bang-gia-chieu-may-dieu-hoa-2023/?srsltid=AfmBOoonYYGrShrQU_9c_rMUYFqZlMeBc0mTuPjjAGH2xIb7nASooNfu
 
 [chiaki.vn]
 match = 6.7%%
