--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-08-05 03:59:02
+lastsearch = 2024-08-05 04:15:15
 
 [quizlet.com]
 match = -170.0%%
@@ -54,7 +54,7 @@ url = https://en.wikipedia.org/wiki/List_of_acupuncture_points
 [books.google.com]
 match = -430.0%%
 title = Proceedings of the 10th West Coast Conference on Formal ...
-url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlgqHImm7&sig=ACfU3U2CJDLdi1JNE0-a0mj1OxQwG9c2uQ&hl=en&sa=X&ved=2ahUKEwiEiaakndyHAxVaFlkFHY1VKbQQ6AF6BAgXEAM
+url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlgqHJmja&sig=ACfU3U2W9wr5lRWg_IbMi8c2RvX7t6pGlA&hl=en&sa=X&ved=2ahUKEwjhwq_0oNyHAxWcEkQIHaTwIYgQ6AF6BAgcEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
