--- a/images/tham-giuong-loai-1-14/config.ini
+++ b/images/tham-giuong-loai-1-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-loai-1-14.html
 lastopen = 2024-06-07 00:36:45
 
 [search]
-lastsearch = 2024-08-05 01:52:28
+lastsearch = 2024-08-05 04:12:51
 
 [bilystore.vn]
 match = -95.2%%
 title = Thảm trải sàn phòng ngủ - Bilystore thảm trải sàn cao cấp
-url = https://bilystore.vn/tham-trai-san-phong-ngu/?srsltid=AfmBOopSDTDmDXJ3JnO5bmRmPE6-bl9ZVD-iYRqT0mNjHSydFybO2WQO
+url = https://bilystore.vn/tham-trai-san-phong-ngu/
 
 [shopee.vn]
 match = -114.3%%
