CI images update

--- a/images/man-in-hoa-dep-18/config.ini
+++ b/images/man-in-hoa-dep-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-18.html
 lastopen = 2024-06-10 01:12:42
 
 [search]
-lastsearch = 2024-08-05 01:49:18
+lastsearch = 2024-08-05 04:33:31
 
 [idfpr.illinois.gov]
 match = -170.6%%
@@ -17,9 +17,9 @@ title = How I gutted my HOA : r/pettyrevenge
 url = https://www.reddit.com/r/pettyrevenge/comments/10fgrkx/how_i_gutted_my_hoa/
 
 [www.quora.com]
-match = -200.0%%
-title = If I buy a house, can an HOA really tell me that my friend ...
-url = https://www.quora.com/If-I-buy-a-house-can-an-HOA-really-tell-me-that-my-friend-can-t-live-with-me-because-we-re-not-blood-related
+match = -164.7%%
+title = How can the HOA kick you out of your house when you ...
+url = https://www.quora.com/How-can-the-HOA-kick-you-out-of-your-house-when-you-own-it
 
 [lauragoodsonart.com]
 match = 47.1%%
