--- a/images/bo-ga-chun-chan-bon-mua-epm22063-180x200/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-epm22063-180x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-epm22063-180x200.html
 lastopen = 2024-06-07 00:34:05
 
 [search]
-lastsearch = 2024-08-05 01:30:49
+lastsearch = 2024-08-05 04:40:51
 
 [everon.com.vn]
 match = 14.8%%
 title = Bộ Chăn Ga Everon EPM 22063
-url = https://everon.com.vn/bo-chan-ga-everon-epm-22063/
+url = https://everon.com.vn/bo-chan-ga-everon-epm-22063/?srsltid=AfmBOopRkuWN09-Mw1DwDfxOP-xqPjvxLq9mwICM5XYYaRjMJToeXyCW
 
 [everon.online]
 match = -5.0%%
@@ -29,7 +29,7 @@ url = https://www.everonvn.vn/chi-tiet/everon-epm24063.html
 [demxanh.com]
 match = 30.6%%
 title = Bộ chăn ga gối Everon modal EPM22063
-url = https://demxanh.com/bo-chan-ga-goi-everon-modal-epm22063.html
+url = https://demxanh.com/bo-chan-ga-goi-everon-modal-epm22063.html?srsltid=AfmBOopipssl-W_ywNhwhUe_8esmnCS0fXxi1hLBJpuVw2U-5r0fUpXv
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -37,9 +37,9 @@ title = Bo Ga chun chần bốn mùa EPM22063 180x200
 url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-epm22063-180x200.html
 
 [www.everonvni.vn]
-match = 16.7%%
-title = BỘ CHĂN GA GỐI SẮC HẠ ESC23002
-url = https://www.everonvni.vn/bo-chan-ga-goi-sac-ha-esc23002/
+match = 29.7%%
+title = BỘ CHĂN GA GỐI GIẤC MƠ MÂY - ESJ24030
+url = https://www.everonvni.vn/bo-chan-ga-goi-giac-mo-may-esj24030/?srsltid=AfmBOorqqINrsH6b_UoiRf2GdTCMTPow-e03XO8avIFV8LSRINWYyeVi
 
 [everonhanquoc.vn]
 match = 19.4%%
