--- a/images/bo-ga-goi-chun-xoa-2m-22/config.ini
+++ b/images/bo-ga-goi-chun-xoa-2m-22/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-2m-22.html
 lastopen = 2024-06-09 22:43:18
 
 [search]
-lastsearch = 2024-08-04 23:19:18
+lastsearch = 2024-08-05 04:38:01
 
 [www.diepxuan.com]
 match = -62.5%%
@@ -18,8 +18,8 @@ url = https://changagoidemsonghong.com/chan-ga-goi-bc57
 
 [songhong.info]
 match = -16.7%%
-title = Mẫu chăn ga gối 100%% cotton mã mầu BC22-067
-url = https://songhong.info/chan-ga-goi-bc67
+title = Bộ chăn ga gối cotton 100%% dòng Basic mã BC-29
+url = https://songhong.info/chan-ga-goi-bc29
 
 [hanvico.com.vn]
 match = 41.7%%
@@ -28,8 +28,8 @@ url = https://hanvico.com.vn/san-pham/bo-ga-chun-living-lv22/
 
 [www.everonvn.vn]
 match = -87.5%%
-title = Everon ESB-22051 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
-url = https://www.everonvn.vn/chi-tiet/everon-esb22051.html
+title = Everon EPC-22046 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
+url = https://www.everonvn.vn/chi-tiet/everon-epc22046.html
 
 [songhongchinhhang.vn]
 match = 0.0%%
@@ -38,8 +38,8 @@ url = https://songhongchinhhang.vn/URBAN-COLLECTION/bo-urban-coleection-2022-202
 
 [everon.com.vn]
 match = -66.7%%
-title = Bộ Chăn Ga Everon EPM 22060 | Mới Nhất Năm 2022. Hotline
-url = https://everon.com.vn/bo-chan-ga-everon-epm-22060/
+title = Bộ Chăn Ga Everon ESB 22055 Bộ Sưu Tập Mới Nhất Năm ...
+url = https://everon.com.vn/bo-chan-ga-everon-esb-22055/
 
 [dailyeveron.vn]
 match = -66.7%%
