--- a/images/chieu-cay-ht-10/config.ini
+++ b/images/chieu-cay-ht-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-10.html
 lastopen = 2024-06-09 23:52:43
 
 [search]
-lastsearch = 2024-08-05 00:33:53
+lastsearch = 2024-08-05 04:41:13
 
 [chieutrucsaigon.com]
 match = 33.3%%
@@ -12,9 +12,9 @@ title = CHIẾU TRÚC TĂM H&T CÂY
 url = https://chieutrucsaigon.com/chieu-truc-tam/
 
 [shopee.vn]
-match = -106.7%%
-title = chiếu tăm việt nam cao cấp kháng khuẩn H.T
-url = https://shopee.vn/chiếu-tăm-việt-nam-cao-cấp-kháng-khuẩn-H.T-i.68883759.1934498848
+match = -6.7%%
+title = chiếu trúc tăm hương trúc ht
+url = https://shopee.vn/chiếu-trúc-tăm-hương-trúc-ht-i.68883759.14478905056
 
 [chieutruc.info]
 match = -126.7%%
@@ -22,9 +22,9 @@ title = Chiếu Tăm H&T - Chiếu Thanh Hương Trúc cao cấp
 url = https://chieutruc.info/chieu-tam-ht/
 
 [www.thietbidiendgp.vn]
-match = -13.3%%
-title = Đèn chiếu điểm HT MAX LIGHT
-url = https://www.thietbidiendgp.vn/hang/htlight/den-chieu-sang/den-chieu-diem-htlight
+match = -40.0%%
+title = Đèn Trang Trí HT MAX LIGHT
+url = https://www.thietbidiendgp.vn/hang/htlight/den-trang-tri
 
 [www.htlightlevel.vn]
 match = -193.3%%
@@ -67,9 +67,9 @@ title = Giống lúa TBR97 | Cứng cây - Chống chịu sâu bệnh tốt
 url = https://thaibinhseed.com.vn/vi-vn/san-pham/giong-lua/giong-lua-thuantbr97.aspx
 
 [www.dentrangtriht.com]
-match = -100.0%%
-title = Đèn trang trí số 1 Việt Nam - HT Light
-url = https://www.dentrangtriht.com/danh-muc/den-ngoai-troi/
+match = -220.0%%
+title = Đèn cắm cỏ đèn chiếu cây công suất 10w ánh sáng ... - HT Light
+url = https://www.dentrangtriht.com/san-pham/den-cam-co-den-chieu-cay-cong-suat-10w-anh-sang-vang-chuyen-trang-tri-san-vuon-cay-xanh-hang-ngoai-troi-chong-nuoc/
 
 [phutungotovietyen.com]
 match = -13.3%%
