--- a/images/chieu-cay-moc-hoa14/config.ini
+++ b/images/chieu-cay-moc-hoa14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa14.html
 lastopen = 2024-06-09 23:35:14
 
 [search]
-lastsearch = 2024-08-05 02:27:31
+lastsearch = 2024-08-05 04:41:34
 
 [www.youtube.com]
-match = -89.5%%
-title = Cách đơn giản để cây mộc hương của bạn nở nhiều hoa
-url = https://www.youtube.com/watch?v=VQ9o9tAU0jk
+match = -26.3%%
+title = cách trồng và chăm sóc cây mộc hương
+url = https://www.youtube.com/playlist?list=PLOR0hkahAaw2OD6ixcgagDZcwB5Jx3-Nd
 
 [trangtrisanvuon.vn]
 match = -147.4%%
