--- a/images/chieu-lac-d2-08/config.ini
+++ b/images/chieu-lac-d2-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-08.html
 lastopen = 2024-06-20 13:15:42
 
 [search]
-lastsearch = 2024-08-05 03:00:41
+lastsearch = 2024-08-05 04:42:18
 
 [batdongsan.com.vn]
 match = -240.0%%
@@ -162,9 +162,9 @@ title = Sơ đồ nhà ga - Tổng công ty cảng hàng không Việt ...
 url = https://www.vietnamairport.vn/tansonnhatairport/tin-tuc/thong-tin-dich-vu/so-do-nha-ga-2
 
 [bocongan.gov.vn]
-match = -200.0%%
-title = Chủ tịch nước Tô Lâm dự Ngày hội toàn dân bảo vệ an ...
-url = https://bocongan.gov.vn/tin-tuc-su-kien/hoat-dong-cua-luc-luong-cong-an/tin-hoat-dong-cua-bo/chu-tich-nuoc-to-lam-du-ngay-hoi-toan-dan-bao-ve-an-ninh-to-quoc-tai-phuong-cua-dong-thanh-pho-ha-noi-d2-t40539.html
+match = -226.7%%
+title = Giao lưu bóng đá giữa Câu lạc bộ Công an Hà Nội và Đội ...
+url = https://bocongan.gov.vn/tin-hoat-dong-cua-bo/giao-luu-bong-da-giua-cau-lac-bo-cong-an-ha-noi-va-doi-bong-cuu-danh-thu-brazil-d2-t38831.html
 
 [hcmyu.hpu2.edu.vn]
 match = -253.3%%
