--- a/images/chieu-truc-thai-den14/config.ini
+++ b/images/chieu-truc-thai-den14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 lastopen = 2024-06-09 23:36:30
 
 [search]
-lastsearch = 2024-08-05 01:39:00
+lastsearch = 2024-08-05 04:34:56
 
 [www.diepxuan.com]
 match = 42.9%%
@@ -14,7 +14,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 [demxanh.com]
 match = 14.3%%
 title = Chiếu Trúc cao cấp hạt Đen - Hà Nội
-url = https://demxanh.com/chieu-truc-den.html
+url = https://demxanh.com/chieu-truc-den.html?srsltid=AfmBOopP3V5FYaIrrU1Kcbc8k0oLCkUHLibGBJjdiNsCciAlLRPlqTc3
 
 [www.lazada.vn]
 match = -81.0%%
