--- a/images/ga-chun-dreamland-180x200-ct/config.ini
+++ b/images/ga-chun-dreamland-180x200-ct/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-dreamland-180x200-ct.html
 lastopen = 2024-06-07 01:32:20
 
 [search]
-lastsearch = 2024-08-04 22:34:06
+lastsearch = 2024-08-05 04:31:29
 
 [demxanh.com]
 match = -42.9%%
@@ -12,9 +12,9 @@ title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 11
 url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-11.html
 
 [www.diepxuan.com]
-match = 25.0%%
-title = Ga phủ ESM20013 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/ga-phu-esm20013-180x200.html
+match = 28.6%%
+title = Điệp Xuân Ga chun EPCARLESS 180x200
+url = https://www.diepxuan.com/ga-chun-epcarless-180x200.html
 
 [mgaleg.maryland.gov]
 match = -75.0%%
@@ -199,7 +199,7 @@ url = http://rainocup.com/index3.php?name=https://xn--b1axgco2a.xn--p1ai/8264395
 [diepxuan.com]
 match = -21.1%%
 title = Điệp Xuân Trang Chủ
-url = https://diepxuan.com/?srsltid=AfmBOoopkaUzGXTPsjjzP89kMgYSjBY2Nr8NWoHShB677I5fYdm0dX_N
+url = https://diepxuan.com/
 
 [www.tripadvisor.com]
 match = -50.0%%
