--- a/images/tham-giuong-ii-180x200/config.ini
+++ b/images/tham-giuong-ii-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-180x200.html
 lastopen = 2024-06-17 21:09:53
 
 [search]
-lastsearch = 2024-08-05 03:30:57
+lastsearch = 2024-08-05 04:29:44
 
 [www.diepxuan.com]
 match = 50.0%%
@@ -12,9 +12,9 @@ title = Điệp Xuân Thảm giường nỉ 180x200
 url = https://www.diepxuan.com/tham-giuong-ni-180x200.html
 
 [demxanh.com]
-match = -22.7%%
-title = Thảm trải giường cao su non màu xanh nhạt
-url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-xanh-nhat.html
+match = 0.0%%
+title = Thảm trải giường cao su non màu ghi
+url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-ghi.html
 
 [www.lazada.vn]
 match = -68.2%%
@@ -37,9 +37,9 @@ title = Giường MDF 1.8x2m có 2 ngăn kéo
 url = https://noithatthuynguyet.com/giuong-mdf-1-8x2m-co-2-ngan-keo/
 
 [tiki.vn]
-match = 0.0%%
-title = Mua Drap giường chống thấm 180 x 200 cm
-url = https://tiki.vn/drap-giuong-chong-tham-180-x-200-cm-p139192110.html
+match = -36.4%%
+title = Thảm trải giường hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=thảm trải giường
 
 [gusofa.vn]
 match = -81.8%%
@@ -67,8 +67,8 @@ title = Mattress 180x200 GOLD S95 DREAMZONE - JYSK
 url = https://jysk.vn/en-US/spring-mattress-dreamzone-s95-r180xd200xc28cm
 
 [decosy.com]
-match = 4.5%%
-title = Furniture & Decoration
+match = -50.0%%
+title = Furniture & Decoration - Decosy Vietnam
 url = https://decosy.com/vi_VN/shop/category/phong-ngu-giuong-1167
 
 [vn.my-best.com]
