--- a/images/vo-goi-ke-xoa-re-khong-chan/config.ini
+++ b/images/vo-goi-ke-xoa-re-khong-chan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ke-xoa-re-khong-chan.html
 lastopen = 2024-06-10 00:42:44
 
 [search]
-lastsearch = 2024-08-05 03:22:18
+lastsearch = 2024-08-05 04:31:50
 
 [www.youtube.com]
 match = -40.7%%
@@ -17,9 +17,9 @@ title = Phân Loại Vỏ Gối Theo Chất Liệu - Ưu, Nhược Điểm Từn
 url = https://ru9.vn/blogs/magazine/phan-loai-vo-goi-theo-chat-lieu-uu-nhuoc-diem-tung-loai
 
 [jysk.vn]
-match = -59.3%%
-title = Vỏ Chăn Ga Gối Trơn, Cotton Cao Cấp Bền, Đẹp Giá Rẻ | JYSK
-url = https://jysk.vn/bo-vo-chan-goi-cotton-det-tron
+match = -33.3%%
+title = Vỏ Gối Trang Trí, Vỏ Gối Sofa Đẹp, Giá Rẻ - JYSK.vn
+url = https://jysk.vn/vo-goi-trang-tri
 
 [elambo.vn]
 match = -3.7%%
@@ -42,9 +42,9 @@ title = vỏ gối kê cổ giá tốt Tháng 8, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=vỏ gối kê cổ&urlold=tron-bo-vo-chan-ga-goi-poly-cottong-ke-ban-co-1m2x2m-them-vo-goi-om/5956463448930783855/2642071820174507179/
 
 [demxanh.com]
-match = -11.1%%
-title = [HOT] Top 9 gối nằm mát tốt nhất cho ngày hè
-url = https://demxanh.com/goi-nam-mat-tot-nhat.html
+match = -74.1%%
+title = [Mẹo vặt] Cách làm phồng ruột gối tại nhà đơn giản, hiệu quả
+url = https://demxanh.com/cach-lam-phong-ruot-goi.html
 
 [www.thegioididong.com]
 match = -55.6%%
@@ -107,9 +107,9 @@ title = Sa thải nhân viên nhưng quên không không chặn quyền truy ...
 url = https://www.tiktok.com/@cafef_official/video/7383144769330990354
 
 [www.nguoi-viet.com]
-match = -31.2%%
-title = Tìm hiểu di chúc
-url = https://www.nguoi-viet.com/doi-song/luat-thue/tim-hieu-di-chuc-3/
+match = 29.6%%
+title = Lê Đình Công & Lê Đình Chức
+url = https://www.nguoi-viet.com/sai-gon-nho/le-dinh-cong-le-dinh-chuc/
 
 [archiveofourown.org]
 match = -55.6%%
@@ -147,9 +147,9 @@ title = Người góp phần làm khởi sắc bản biên giới Mùa Xuân
 url = https://www.bienphong.com.vn/nguoi-gop-phan-lam-khoi-sac-ban-bien-gioi-mua-xuan-post477378.html
 
 [m.facebook.com]
-match = -29.6%%
-title = Chia sẻ kinh nghiệm bán hàng nghìn đơn - Shopee
-url = https://m.facebook.com/groups/shopeenguoiban.chiasekinhnghiem/posts/1763832037754590/
+match = -77.8%%
+title = Tifosi - Đang định tắt máy đi ngủ mà các bạn nhắn tin quá ...
+url = https://m.facebook.com/tifosi.hpo/photos/đang-định-tắt-máy-đi-ngủ-mà-các-bạn-nhắn-tin-quá-trờinào-là-hoa-hậu-là-ba-cây-cả/479473191381939/
 
 [vietbao.com]
 match = -22.2%%
@@ -162,9 +162,9 @@ title = Chồng cả tháng không hứng thú chuyện chăn gối, tôi chán 
 url = https://2sao.vn/chong-ca-thang-khong-hung-thu-chuyen-chan-goi-toi-chan-nan-muon-ly-hon-n-344342.html
 
 [diendantraichieu.blogspot.com]
-match = -21.1%%
-title = TIN TỨC - 29/6/2024
-url = https://diendantraichieu.blogspot.com/p/tin-tuc-2962024.html
+match = -27.8%%
+title = TIN TỨC - 3/8/2024
+url = https://diendantraichieu.blogspot.com/p/tin-tuc-382024.html
 
 [trithucvn.co]
 match = -48.1%%
@@ -187,9 +187,9 @@ title = Bảng giá lẻ vỏ chăn ga gối trắng kẻ sọc cao cấp
 url = https://demhong.vn/chan-ga-goi-trang-ke-soc/
 
 [dienmaycholon.com]
-match = -44.4%%
-title = Gối & Vỏ Gối SIMPLEHOME giá rẻ nhiều ưu đãi, giao hàng ...
-url = https://dienmaycholon.com/goi-vo-goi-simplehome
+match = -48.1%%
+title = Cách tìm lại nhật ký cuộc gọi đã xóa trên Android và ...
+url = https://dienmaycholon.com/kinh-nghiem-mua-sam/huong-dan-cach-tim-lai-nhat-ky-cuoc-goi-da-xoa-tren-android-va-iphone
 
 [metruyen.me]
 match = 33.3%%
