CI images update

--- a/images/bo-ga-chun-chan-bon-mua-epm22063-180x200/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-epm22063-180x200/config.ini
@@ -12,9 +12,9 @@ title = Bộ Chăn Ga Everon EPM 22063
 url = https://everon.com.vn/bo-chan-ga-everon-epm-22063/?srsltid=AfmBOopRkuWN09-Mw1DwDfxOP-xqPjvxLq9mwICM5XYYaRjMJToeXyCW
 
 [everon.online]
-match = -5.0%%
-title = [VIDEO] Bộ Chăn Ga Everon EPM22063 Chất Liệu Modal Cao ...
-url = https://everon.online/blogs/video/bo-everon-epm22063-co-gi-dac-biet
+match = -50.0%%
+title = Bộ Everon EPM24061
+url = https://everon.online/products/bo-everon-epm24061
 
 [everonhn.com.vn]
 match = 14.8%%
@@ -23,8 +23,8 @@ url = https://everonhn.com.vn/bo-chan-ga-everon-epm-22063
 
 [www.everonvn.vn]
 match = -20.0%%
-title = Everon EPM-24063 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
-url = https://www.everonvn.vn/chi-tiet/everon-epm24063.html
+title = Everon EPM-22063 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
+url = https://www.everonvn.vn/chi-tiet/everon-epm22063.html
 
 [demxanh.com]
 match = 30.6%%
