--- a/images/bo-phu-mau-160x200/config.ini
+++ b/images/bo-phu-mau-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-phu-mau-160x200.html
 lastopen = 2024-06-17 03:11:36
 
 [search]
-lastsearch = 2024-08-04 23:24:06
+lastsearch = 2024-08-05 04:50:06
 
 [tiki.vn]
 match = -138.9%%
@@ -32,19 +32,19 @@ title = Giường 160x200 – Chổi Xể - Nội Thất Giá Rẻ Xuất Âu
 url = https://choixe.vn/collections/giuong-160x200
 
 [nemkimtrang.com]
-match = -150.0%%
-title = Bộ Ga (Drap) Nệm Tencel Edena Mẫu 705 - CHÍNH HÃNG ...
-url = https://nemkimtrang.com/bo-ga-drap-nem-tencel-edena-mau-705-chinh-hang-cao-cap
+match = -116.7%%
+title = Bộ Ga (Drap) Nệm Cotton Đặc Biệt Edena Mẫu 524
+url = https://nemkimtrang.com/bo-ga-drap-nem-cotton-dac-biet-edena-mau-524-chinh-hang-cao-cap
 
 [demxanh.com]
-match = -72.2%%
-title = Bộ ga chun Cotton chống thấm màu xanh đậm
-url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-xanh-dam.html
+match = -55.6%%
+title = Bộ ga chun Cotton chống thấm màu đỏ
+url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-do.html
 
 [foreverbedding.net]
-match = -55.6%%
-title = Bộ ga phủ Common C120 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-phu-common-c120
+match = -66.7%%
+title = Bộ ga phủ Passion A114 - Forever Bedding
+url = https://foreverbedding.net/bo-ga-phu-passion-a114
 
 [aeoneshop.com]
 match = -105.6%%
