--- a/images/ruot-goi-ke-hoa-45x65/config.ini
+++ b/images/ruot-goi-ke-hoa-45x65/config.ini
@@ -7,9 +7,9 @@ lastopen = 2024-08-01 06:54:03
 lastsearch = 2024-08-05 04:35:17
 
 [www.everonvn.vn]
-match = 66.7%%
-title = Ruột gối Everon 45 x 65
-url = https://www.everonvn.vn/chi-tiet/ruot-goi-everon-45-x-65.html
+match = -95.2%%
+title = Bảng giá các kích thước ruột gối Everon Standard Soft
+url = https://www.everonvn.vn/chi-tiet/ruot-goi-everon-standard-soft.html
 
 [shopee.vn]
 match = -81.0%%
