--- a/images/vo-goi-ke-warmdream-45x65-hq/config.ini
+++ b/images/vo-goi-ke-warmdream-45x65-hq/config.ini
@@ -7,8 +7,8 @@ lastopen = 2024-07-01 10:42:00
 lastsearch = 2024-08-05 04:36:18
 
 [www.diepxuan.com]
-match = 35.7%%
-title = Vỏ gối kê màu 45x65 - Điệp Xuân
+match = 28.6%%
+title = Điệp Xuân Vỏ gối kê màu 45x65
 url = https://www.diepxuan.com/vo-goi-ke-mau-45x65.html
 
 [www.head-fi.org]
